--- a/guides/de/essentials/condition-sets/introduction.mdx
+++ b/guides/de/essentials/condition-sets/introduction.mdx
@@ -6,7 +6,7 @@ icon: "book-open"
 
 ## Was ist ein Bedingungssatz?
 
-Ein **Bedingungssatz** ist eine Gruppe vordefinierter Bedingungen, die verwendet werden können, um zu steuern, wann eine Checkout-Regel ausgeführt werden soll. Diese Bedingungen sind im [Wann](/guides/de/get-started/concepts#conditions-the-“when”) Selektor im Regel-Setup verfügbar.
+Ein **Bedingungssatz** ist eine Gruppe vordefinierter Bedingungen, die verwendet werden können, um zu steuern, wann eine Checkout-Regel ausgeführt werden soll. Diese Bedingungen sind im [Wann](/guides/de/get-started/concepts#bedingungen-das-“wann”) Selektor im Regel-Setup verfügbar.
 
 Jeder Bedingungssatz listet auf, wie viele Bedingungen darin verfügbar sind, im Vergleich zur Gesamtzahl. Zum Beispiel bedeutet **Bedingungssatz 1** `22 / 143`, dass 22 Bedingungen in Bedingungssatz 1 verfügbar sind, von insgesamt 143 Bedingungen. Hierbei sind 143 die Gesamtzahl aller in allen Bedingungssätzen verfügbaren Bedingungen.
 
@@ -19,7 +19,7 @@ Jeder Bedingungssatz listet auf, wie viele Bedingungen darin verfügbar sind, im
   Sie können mit der Maus über den Namen des Bedingungssatzes fahren, um alle in diesem Bedingungssatz verfügbaren Bedingungen zu sehen. Außerdem können Sie die Suchleiste verwenden, um eine bestimmte Bedingung zu finden.
 </Info>
 
-Bedingungen aus einem ausgewählten **Bedingungssatz** erscheinen im [Wann](/guides/de/get-started/concepts#conditions-the-“when”) Selektor unten innerhalb des Regel-[Blocks](/guides/de/get-started/concepts#block). Sie können zwischen Bedingungssätzen wechseln und dann den Bedingungsselektor im "Wann"-Selektor unten öffnen, um die in diesem Bedingungssatz verfügbaren Bedingungen zu sehen.
+Bedingungen aus einem ausgewählten **Bedingungssatz** erscheinen im [Wann](/guides/de/get-started/concepts#bedingungen-das-“wann”) Selektor unten innerhalb des Regel-[Blocks](/guides/de/get-started/concepts#block). Sie können zwischen Bedingungssätzen wechseln und dann den Bedingungsselektor im "Wann"-Selektor unten öffnen, um die in diesem Bedingungssatz verfügbaren Bedingungen zu sehen.
 
 > Zum Beispiel verwenden wir hier den Standard-**Bedingungssatz 1**, der 22 verfügbare Bedingungen enthält. Wir setzen die Regel so, dass sie ausgeführt wird, wenn der **Bestellwert** größer oder gleich **50 $** ist und das **Lieferland** die **Vereinigten Staaten** sind, da diese Bedingungen im Bedingungssatz 1 verfügbar sind.
 
