--- a/guides/de/essentials/discount/discount-shipping-methods.mdx
+++ b/guides/de/essentials/discount/discount-shipping-methods.mdx
@@ -19,8 +19,8 @@ Die folgenden Schritte zeigen, wie Sie mithilfe der App eine **Versandmethoden r
 
 ### Neue Regel erstellen
 
-Öffnen Sie die App in Ihrem [Shopify-Adminbereich](/guides/de/get-started/installation#go-to-the-app).  
-Gehen Sie in der Seitenleiste zum Abschnitt [Regeln](/guides/de/get-started/quickstart#create-a-sample-rule) und klicken Sie auf _"Regel erstellen"_.
+Öffnen Sie die App in Ihrem [Shopify-Adminbereich](/guides/de/get-started/installation#app-öffnen).  
+Gehen Sie in der Seitenleiste zum Abschnitt [Regeln](/guides/de/get-started/quickstart#erstellen-einer-beispielregel) und klicken Sie auf _"Regel erstellen"_.
 
 Dann werden Sie zum Bildschirm **Checkout-Regeltyp auswählen** weitergeleitet.  
 Wählen Sie _Kategorie "Versand" → Checkout-Regeltyp "Versandmethoden rabattieren" → Klicken Sie auf „Regel auswählen“_.
@@ -56,7 +56,7 @@ Hier wählen wir den Status **Testing**, damit wir die Regel schnell testen kön
   alt="Regelstatus"
 />
 
-Als Nächstes konfigurieren Sie auf demselben Bildschirm die [Kombinationen](/guides/de/get-started/concepts#combinations)-Einstellungen, um zu steuern, wie dieser Versandrabatt mit anderen Rabatten interagiert. Sie können zulassen, dass er kombiniert wird mit:
+Als Nächstes konfigurieren Sie auf demselben Bildschirm die [Kombinationen](/guides/de/get-started/concepts#kombinationen)-Einstellungen, um zu steuern, wie dieser Versandrabatt mit anderen Rabatten interagiert. Sie können zulassen, dass er kombiniert wird mit:
 
 - **Produktrabatten** – Dadurch kann der Versandrabatt zusammen mit produktspezifischen Rabatten verwendet werden. Stellen Sie sicher, dass Produktrabatte auch so konfiguriert sind, dass sie mit Versandrabatten kombiniert werden können.
 
@@ -67,7 +67,7 @@ Als Nächstes konfigurieren Sie auf demselben Bildschirm die [Kombinationen](/gu
   alt="Kombinationen Versandmethoden rabattieren"
 />
 
-Als Nächstes wählen Sie auf demselben Bildschirm das relevante [Bedingungsset](/guides/de/get-started/concepts#condition-set), die [Bedingung](/guides/de/get-started/concepts#conditions-when) und die [Aktion](/guides/de/get-started/concepts#action-what).
+Als Nächstes wählen Sie auf demselben Bildschirm das relevante [Bedingungsset](/guides/de/get-started/concepts#bedingungsset), die [Bedingung](/guides/de/get-started/concepts#bedingungen-das-“wann”) und die [Aktion](/guides/de/get-started/concepts#aktion-das-“was”).
 
 > Als Beispiel verwenden wir hier das Standard-**Bedingungsset 1**, stellen die Regel so ein, dass sie **Immer** ausgeführt wird, und konfigurieren sie so, dass ein **10%-Rabatt** auf alle Versandmethoden angewendet wird, indem wir die Option **Prozentsatz** verwenden.  
 > Die Rabattnachricht **"10% RABATT"** wird den Kunden beim Checkout angezeigt.
@@ -91,7 +91,7 @@ Der Rabatt kann auch nur auf bestimmte Versandmethoden angewendet werden, indem 
   alt="Auswahl Versandmethoden Rabatt"
 />
 
-Als Nächstes können Sie auf demselben Bildschirm im Abschnitt [Maximale Rabattnutzung](/guides/de/get-started/concepts#maximum-discount-uses) optional ein Nutzungslimit für den Rabattcode aktivieren, ihn auf eine einmalige Nutzung pro Kunde beschränken oder beides anwenden, falls ein Rabattcode ausgewählt ist.
+Als Nächstes können Sie auf demselben Bildschirm im Abschnitt [Maximale Rabattnutzung](/guides/de/get-started/concepts#maximale-rabattnutzung) optional ein Nutzungslimit für den Rabattcode aktivieren, ihn auf eine einmalige Nutzung pro Kunde beschränken oder beides anwenden, falls ein Rabattcode ausgewählt ist.
 
 Klicken Sie abschließend auf die <b>Speichern</b>-Schaltfläche oben, um Ihre Regel zu erstellen und zu speichern.
 
@@ -131,7 +131,7 @@ Wählen Sie die Regel aus, die Sie aktivieren möchten, und klicken Sie dann auf
 <Warning>
   Die Regelaktivierung ist nur in kostenpflichtigen Plänen verfügbar. Wenn Sie
   Ihren Plan noch nicht aktualisiert haben, folgen Sie den Anweisungen
-  [hier](/guides/de/get-started/installation#upgrade-your-plan), um ein Upgrade
+  [hier](/guides/de/get-started/installation#plan-aktualisieren), um ein Upgrade
   durchzuführen.
 </Warning>
 <img
