--- a/guides/de/essentials/shipping/discount-shipping-methods.mdx
+++ b/guides/de/essentials/shipping/discount-shipping-methods.mdx
@@ -16,7 +16,7 @@ Die folgenden Schritte zeigen, wie man eine **Versandrabatte-Regel** mithilfe de
 
 ### Neue Regel erstellen
 
-Öffnen Sie die App in Ihrem [Shopify-Adminbereich](/guides/de/get-started/installation#go-to-the-app). Gehen Sie in der Seitenleiste zum Abschnitt [Regeln](/guides/de/get-started/quickstart#create-a-sample-rule) und klicken Sie auf _"Regel erstellen"_.
+Öffnen Sie die App in Ihrem [Shopify-Adminbereich](/guides/de/get-started/installation#app-öffnen). Gehen Sie in der Seitenleiste zum Abschnitt [Regeln](/guides/de/get-started/quickstart#erstellen-einer-beispielregel) und klicken Sie auf _"Regel erstellen"_.
 
 Anschließend werden Sie zum Bildschirm **Checkout-Regeltyp auswählen** weitergeleitet. Wählen Sie _Kategorie "Versand" → Checkout-Regeltyp "Versandrabatte" → Klicken Sie auf "Regel auswählen"_.
 
@@ -50,7 +50,7 @@ Wählen Sie anschließend auf demselben Bildschirm den [Status](/guides/de/get-s
   alt="Regelstatus"
 />
 
-Konfigurieren Sie anschließend die [Kombinationen](/guides/de/get-started/concepts#combinations), um zu steuern, wie dieser Versandrabatt mit anderen Rabatten interagiert. Sie können wählen, ob er kombiniert werden darf mit:
+Konfigurieren Sie anschließend die [Kombinationen](/guides/de/get-started/concepts#kombinationen), um zu steuern, wie dieser Versandrabatt mit anderen Rabatten interagiert. Sie können wählen, ob er kombiniert werden darf mit:
 
 - **Produktrabatten** – Ermöglicht die Verwendung des Versandrabatts zusammen mit allen Produkt-Rabatten. Stellen Sie sicher, dass auch Produkt-Rabatte für die Kombination mit Versandrabatten konfiguriert sind.
 
@@ -61,7 +61,7 @@ Konfigurieren Sie anschließend die [Kombinationen](/guides/de/get-started/conce
   alt="Kombinationen Versandrabatte"
 />
 
-Wählen Sie anschließend die relevanten [Bedingungssätze](/guides/de/get-started/concepts#condition-set), [Bedingungen](/guides/de/get-started/concepts#conditions-when) und [Aktionen](/guides/de/get-started/concepts#action-what) aus.
+Wählen Sie anschließend die relevanten [Bedingungssätze](/guides/de/get-started/concepts#bedingungsset), [Bedingungen](/guides/de/get-started/concepts#bedingungen-das-“wann”) und [Aktionen](/guides/de/get-started/concepts#aktion-das-“was”) aus.
 
 > Als Beispiel verwenden wir hier den Standard **Bedingungssatz 1**, setzen die Regel auf **Immer** auszuführen und konfigurieren sie so, dass ein **10%-Rabatt** auf alle Versandmethoden mit der **Prozentoption** angewendet wird. Die Rabattmeldung **"10% RABATT"** wird den Kunden beim Checkout angezeigt.
 
@@ -84,7 +84,7 @@ Der Rabatt kann auch nur auf bestimmte Versandmethoden angewendet werden, indem 
   alt="Versandmethoden-Auswahl"
 />
 
-Im Abschnitt [Maximale Rabattverwendungen](/guides/de/get-started/concepts#maximum-discount-uses) können Sie optional ein Nutzungslimit für den Rabattcode aktivieren, ihn auf einmal pro Kunde beschränken oder beides anwenden, wenn ein Rabattcode ausgewählt ist.
+Im Abschnitt [Maximale Rabattverwendungen](/guides/de/get-started/concepts#maximale-rabattnutzung) können Sie optional ein Nutzungslimit für den Rabattcode aktivieren, ihn auf einmal pro Kunde beschränken oder beides anwenden, wenn ein Rabattcode ausgewählt ist.
 
 Klicken Sie abschließend auf die <b>Speichern</b>-Schaltfläche oben, um Ihre Regel zu erstellen und zu speichern.
 
@@ -117,7 +117,7 @@ Nach dem Testen können wir die Regel aktivieren, damit sie Änderungen beim Che
 Klicken Sie in der Seitenleiste auf **Regeln**, um alle Regeln anzuzeigen. Wählen Sie die Regel aus, die Sie aktivieren möchten, und klicken Sie dann auf **Aktivieren**, um sie zu aktivieren.
 
 <Warning>
-  Die Regelaktivierung ist nur in kostenpflichtigen Plänen verfügbar. Wenn Sie Ihren Plan noch nicht aktualisiert haben, folgen Sie den Anweisungen [hier](/guides/de/get-started/installation#upgrade-your-plan), um ein Upgrade durchzuführen.
+  Die Regelaktivierung ist nur in kostenpflichtigen Plänen verfügbar. Wenn Sie Ihren Plan noch nicht aktualisiert haben, folgen Sie den Anweisungen [hier](/guides/de/get-started/installation#plan-aktualisieren), um ein Upgrade durchzuführen.
 </Warning>
 
 <img
