--- a/guides/de/get-started/introduction.mdx
+++ b/guides/de/get-started/introduction.mdx
@@ -26,14 +26,14 @@ Starten Sie mit BeSure Checkout Rules in nur wenigen einfachen Schritten. Die fo
   <Card
     title="App installieren"
     icon="download"
-    href="/guides/de/get-started/installation#install-app"
+    href="/guides/de/get-started/installation#app-installieren"
   >
     Fügen Sie BeSure Checkout Rules über den App Store zu Ihrem Shopify-Shop hinzu.
   </Card>
   <Card
     title="App im Admin öffnen"
     icon="gear"
-    href="/guides/de/get-started/installation#go-to-the-app"
+    href="/guides/de/get-started/installation#app-öffnen"
   >
     Greifen Sie in Ihrem Shopify-Adminbereich auf die App zu, um mit der
     Konfiguration Ihrer Checkout-Logik zu beginnen.
@@ -48,7 +48,7 @@ Starten Sie mit BeSure Checkout Rules in nur wenigen einfachen Schritten. Die fo
   <Card
     title="In Aktion sehen"
     icon="eye"
-    href="/guides/de/get-started/quickstart#test-the-rule"
+    href="/guides/de/get-started/quickstart#regel-testen"
   >
     Ihre Regeln werden automatisch beim Checkout angewendet.
   </Card>
