--- a/guides/de/get-started/quickstart.mdx
+++ b/guides/de/get-started/quickstart.mdx
@@ -65,7 +65,7 @@ Nachdem der Test abgeschlossen ist, können wir die Regel aktivieren, damit sie 
 Klicken Sie in der Seitenleiste auf **Regeln**, um alle Regeln anzuzeigen. Wählen Sie die Regel aus, die Sie aktivieren möchten, und klicken Sie dann auf die **Aktivieren**-Schaltfläche, um sie zu aktivieren.
 
 <Warning>
-  Die Regelaktivierung ist nur in kostenpflichtigen Plänen verfügbar. Wenn Sie Ihren Plan noch nicht aktualisiert haben, befolgen Sie die Anweisungen [hier](/guides/de/get-started/installation#upgrade-your-plan), um ein Upgrade durchzuführen.
+  Die Regelaktivierung ist nur in kostenpflichtigen Plänen verfügbar. Wenn Sie Ihren Plan noch nicht aktualisiert haben, befolgen Sie die Anweisungen [hier](/guides/de/get-started/installation#plan-aktualisieren), um ein Upgrade durchzuführen.
 </Warning>
 <img src="/images/shared/activate-the-rule.webp" alt="Regel aktivieren" />
 
