--- a/guides/es/advanced/branching.mdx
+++ b/guides/es/advanced/branching.mdx
@@ -13,8 +13,7 @@ La ramificación te permite construir reglas usando múltiples bloques de condic
 > Aquí hay un ejemplo de una regla ramificada con tres bloques. Aquí, queremos aplicar diferentes descuentos basados en la etiqueta del producto y tenemos un descuento predeterminado del 5% en todo el envío en caso de que el cliente no sea elegible para ninguno de los otros descuentos. Solo un bloque se ejecutará basado en las condiciones y luego la regla se detendrá.
 
 <Note>
-  La condición clave aquí es [Previous all conditions
-  invalid](/guides/en/essentials/condition-sets/condition-set-1#previous-all-conditions-invalid)
+  La condición clave aquí es [Todas las condiciones anteriores no válidas](/guides/es/essentials/condition-sets/condition-set-1#todas-las-condiciones-anteriores-no-válidas)
   en el segundo y tercer bloques, que asegura que solo un bloque se ejecute basado en
   las condiciones y luego la regla se detenga. Usando esta condición puedes usar
   ramificación en cualquier regla.
@@ -68,7 +67,7 @@ Así es como esta regla se ejecutará:
 
 ### Bloque de respaldo (else)
 
-- Si ninguno de los bloques anteriores coincide, puedes añadir un bloque de respaldo con una condición de [Previous all conditions invalid](/guides/en/essentials/condition-sets/condition-set-1#previous-all-conditions-invalid).
+- Si ninguno de los bloques anteriores coincide, puedes añadir un bloque de respaldo con una condición de [Todas las condiciones anteriores no válidas](/guides/es/essentials/condition-sets/condition-set-1#todas-las-condiciones-anteriores-no-válidas).
 - Esto actúa como el **Else (catch all predeterminado)** y asegura que siempre haya una acción **"Then"** predeterminada (ej., aplicar 5% de descuento), cuando no se ejecutaron bloques anteriores.
 
 > **Ejemplo:** Previous all conditions invalid → Aplicar 5% OFF en todo el envío
