--- a/guides/fr/essentials/condition-sets/introduction.mdx
+++ b/guides/fr/essentials/condition-sets/introduction.mdx
@@ -7,7 +7,7 @@ icon: "book-open"
 ## Qu’est-ce qu’un ensemble de conditions ?
 
 Un **ensemble de conditions** est un groupe de conditions prédéfinies qui peuvent être utilisées pour contrôler quand une règle de passage en caisse doit s’exécuter.  
-Ces conditions sont disponibles dans le sélecteur [Quand](/guides/fr/get-started/concepts#conditions-le-“quand”) lors de la configuration de la règle.
+Ces conditions sont disponibles dans le sélecteur [Quand](/guides/fr/get-started/concepts#conditions-le-«-quand-») lors de la configuration de la règle.
 
 Chaque ensemble de conditions indique combien de conditions sont disponibles à l’intérieur par rapport au total.  
 Par exemple, **Ensemble de conditions 1** `22 / 143` signifie qu’il y a 22 conditions disponibles dans l’Ensemble de conditions 1 sur un total de 143 conditions.  
@@ -24,7 +24,7 @@ Ici, 143 représente le nombre total de conditions disponibles dans tous les ens
   Vous pouvez également rechercher une condition en utilisant la barre de recherche pour trouver une condition spécifique.
 </Info>
 
-Les conditions d’un **ensemble de conditions** sélectionné apparaissent dans le sélecteur [Quand](/guides/fr/get-started/concepts#conditions-le-“quand”) ci-dessous, à l’intérieur du [bloc](/guides/fr/get-started/concepts#block) de règle.  
+Les conditions d’un **ensemble de conditions** sélectionné apparaissent dans le sélecteur [Quand](/guides/fr/get-started/concepts#conditions-le-«-quand-») ci-dessous, à l’intérieur du [bloc](/guides/fr/get-started/concepts#bloc) de règle.  
 Vous pouvez basculer entre les ensembles de conditions puis ouvrir le sélecteur de conditions dans le sélecteur « Quand » ci-dessous, afin de voir les conditions disponibles dans l’ensemble choisi.
 
 > Par exemple, ici nous utilisons l’**Ensemble de conditions 1** par défaut, qui comporte 22 conditions disponibles, en configurant la règle pour s’exécuter si le **Total de la commande** est supérieur ou égal à **50 $** et que le **Pays d’expédition** est les **États-Unis**, puisque ces conditions sont disponibles dans l’Ensemble de conditions 1.
