--- a/guides/fr/essentials/validation/validate-block-checkout.mdx
+++ b/guides/fr/essentials/validation/validate-block-checkout.mdx
@@ -16,7 +16,7 @@ Les étapes suivantes montrent comment créer et configurer une règle **Valider
 
 ### Créer une nouvelle règle
 
-Depuis votre [admin Shopify](/guides/fr/get-started/installation#go-to-the-app), ouvrez l’application. Dans la barre latérale, allez à la section [Règles](/guides/fr/get-started/quickstart#create-a-sample-rule) et cliquez sur _"Créer une règle"_.
+Depuis votre [admin Shopify](/guides/fr/get-started/installation#accéder-à-l’application), ouvrez l’application. Dans la barre latérale, allez à la section [Règles](/guides/fr/get-started/quickstart#créer-une-règle-d’exemple) et cliquez sur _"Créer une règle"_.
 
 Ensuite, vous serez redirigé vers l’écran **Sélectionner le type de règle de passage en caisse**. Choisissez _catégorie "Validation" → type de règle de passage en caisse "Valider/Bloquer le passage en caisse" → cliquez sur “Sélectionner la règle”_.
 
@@ -29,7 +29,7 @@ Ensuite, vous arriverez sur l’écran **Créer une nouvelle règle de validatio
 
 ### Configuration de la règle
 
-Pour configurer la règle, nous pouvons d’abord, facultativement, ajouter un nom tel que "Valider/Bloquer le passage en caisse" pour décrire ce qu’elle fait. Ensuite, sélectionnez le [statut](/guides/fr/get-started/concepts#status) de la règle : Mise à l’essai, Active ou Désactivée.
+Pour configurer la règle, nous pouvons d’abord, facultativement, ajouter un nom tel que "Valider/Bloquer le passage en caisse" pour décrire ce qu’elle fait. Ensuite, sélectionnez le [statut](/guides/fr/get-started/concepts#statut) de la règle : Mise à l’essai, Active ou Désactivée.
 
 Ici, nous allons choisir le statut **Mise à l’essai**, afin de pouvoir rapidement tester la règle sans affecter le passage en caisse des vrais clients.
 
@@ -38,7 +38,7 @@ Ici, nous allons choisir le statut **Mise à l’essai**, afin de pouvoir rapide
   alt="Configuration de la règle 1"
 />
 
-Ensuite, sur le même écran, sélectionnez au moins une option sous [Déclencher cette règle](/guides/fr/get-started/concepts#trigger). Vous pouvez choisir **Interagir avec le passage en caisse**, qui exécute la règle pendant que le client est dans le processus de passage en caisse, et **Terminer le passage en caisse**, qui exécute la règle lorsque le client termine le passage en caisse. Par défaut, vous devriez sélectionner les deux options pour vous assurer que la règle s’exécute toujours lorsque nécessaire.
+Ensuite, sur le même écran, sélectionnez au moins une option sous [Déclencher cette règle](/guides/fr/get-started/concepts#déclencheur). Vous pouvez choisir **Interagir avec le passage en caisse**, qui exécute la règle pendant que le client est dans le processus de passage en caisse, et **Terminer le passage en caisse**, qui exécute la règle lorsque le client termine le passage en caisse. Par défaut, vous devriez sélectionner les deux options pour vous assurer que la règle s’exécute toujours lorsque nécessaire.
 
 <Info>
   Si vous n’êtes pas sûr de ce qu’il faut choisir pour certains paramètres de
@@ -49,7 +49,7 @@ Ensuite, sur le même écran, sélectionnez au moins une option sous [Déclenche
 
 <img src="/images/concepts/trigger.webp" alt="Déclencheur" />
 
-Ensuite, sur le même écran, sélectionnez l’[ensemble de conditions](/guides/fr/get-started/concepts#condition-set) pertinent, la [condition](/guides/fr/get-started/concepts#conditions-when) et l’[action](/guides/fr/get-started/concepts#action-what).
+Ensuite, sur le même écran, sélectionnez l’[ensemble de conditions](/guides/fr/get-started/concepts#ensemble-de-conditions) pertinent, la [condition](/guides/fr/get-started/concepts#conditions-le-«-quand-») et l’[action](/guides/fr/get-started/concepts#action-le-«-quoi-»).
 
 > Par exemple, ici nous utilisons l’**Ensemble de conditions 1** par défaut, en définissant la règle pour qu’elle se déclenche lorsque le champ **"Ligne d’adresse 2 (Appartement, suite, etc)"** est **vide**, et en la configurant pour bloquer le passage en caisse. Le message d’erreur **"Entrez une adresse complète"** sera affiché sous le champ **Ligne d’adresse 2** lors du passage en caisse, obligeant les clients à fournir leur adresse complète avant de continuer.
 
@@ -123,7 +123,7 @@ Cliquez sur **Règles** dans la barre latérale pour afficher toutes les règles
 <Warning>
   L’activation des règles n’est disponible que sur les forfaits payants. Si vous
   n’avez pas encore mis à niveau votre forfait, suivez les instructions
-  [ici](/guides/fr/get-started/installation#upgrade-your-plan) pour effectuer la
+  [ici](/guides/fr/get-started/installation#mettre-à-niveau-votre-forfait) pour effectuer la
   mise à niveau.
 </Warning>
 
