--- a/guides/fr/get-started/introduction.mdx
+++ b/guides/fr/get-started/introduction.mdx
@@ -26,14 +26,14 @@ Commencez avec BeSure Checkout Rules en seulement quelques étapes simples. Les 
   <Card
     title="Installer l’application"
     icon="download"
-    href="/guides/fr/get-started/installation#install-app"
+    href="/guides/fr/get-started/installation#installer-l’application"
   >
     Ajoutez BeSure Checkout Rules à votre boutique Shopify depuis l’App Store.
   </Card>
   <Card
     title="Ouvrir l’application dans l’administration"
     icon="gear"
-    href="/guides/fr/get-started/installation#go-to-the-app"
+    href="/guides/fr/get-started/installation#accéder-à-l’application"
   >
     Accédez à l’application depuis votre administration Shopify pour commencer à configurer votre logique de paiement.
   </Card>
@@ -47,7 +47,7 @@ Commencez avec BeSure Checkout Rules en seulement quelques étapes simples. Les 
   <Card
     title="Voir le résultat en action"
     icon="eye"
-    href="/guides/fr/get-started/quickstart#test-the-rule"
+    href="/guides/fr/get-started/quickstart#tester-la-règle"
   >
     Vos règles sont automatiquement appliquées lors du paiement.
   </Card>
