--- a/guides/fr/get-started/quickstart.mdx
+++ b/guides/fr/get-started/quickstart.mdx
@@ -74,7 +74,7 @@ Cliquez sur **Règles** dans la barre latérale pour afficher toutes les règles
 <Warning>
   L’activation des règles n’est disponible que dans les forfaits payants. Si vous
   n’avez pas encore mis à niveau votre forfait, suivez les instructions
-  [ici](/guides/fr/get-started/installation#upgrade-your-plan) pour effectuer la mise à niveau.
+  [ici](/guides/fr/get-started/installation#mettre-à-niveau-votre-forfait) pour effectuer la mise à niveau.
 </Warning>
 
 <img src="/images/shared/activate-the-rule.webp" alt="Activer la règle" />
