--- a/guides/ja/essentials/condition-sets/introduction.mdx
+++ b/guides/ja/essentials/condition-sets/introduction.mdx
@@ -6,7 +6,7 @@ icon: "book-open"
 
 ## 条件セットとは何か
 
-**条件セット** は、あらかじめ定義された条件のグループで、チェックアウトルールをいつ実行するかを制御するために使用できます。これらの条件は、ルール設定の [When](/guides/ja/get-started/concepts#conditions-the-“when”) セレクターで利用可能です。
+**条件セット** は、あらかじめ定義された条件のグループで、チェックアウトルールをいつ実行するかを制御するために使用できます。これらの条件は、ルール設定の [When](/guides/ja/get-started/concepts#コンディション（「いつ」）) セレクターで利用可能です。
 
 各条件セットは、利用可能な条件の数と総条件数を示します。例えば、**条件セット 1** `22 / 143` は、条件セット 1 内に 22 の条件があり、全条件数 143 のうち 22 条件が利用可能であることを意味します。ここで 143 は、すべての条件セットに存在する条件の総数です。
 
@@ -19,7 +19,7 @@ icon: "book-open"
   条件セット名にマウスをホバーすると、その条件セットで利用可能なすべての条件を確認できます。また、検索バーを使用して特定の条件を探すこともできます。
 </Info>
 
-選択した **条件セット** の条件は、ルール [ブロック](/guides/ja/get-started/concepts#block) 内の [When](/guides/ja/get-started/concepts#conditions-the-“when”) セレクターに表示されます。条件セットを切り替えた後、下の "When" セレクターで条件セレクターを開くと、選択した条件セット内の条件が確認できます。
+選択した **条件セット** の条件は、ルール [ブロック](/guides/ja/get-started/concepts#ブロック) 内の [When](/guides/ja/get-started/concepts#コンディション（「いつ」）) セレクターに表示されます。条件セットを切り替えた後、下の "When" セレクターで条件セレクターを開くと、選択した条件セット内の条件が確認できます。
 
 > 例えば、ここではデフォルトの **条件セット 1** を使用しています。条件セット 1 には 22 の条件があり、ルールを実行する条件として **注文合計** が **$50** 以上で、**配送先国** が **アメリカ合衆国** の場合に設定しています。これは、これらの条件が条件セット 1 に含まれているためです。
 
