--- a/guides/ja/essentials/discount/discount-shipping-methods.mdx
+++ b/guides/ja/essentials/discount/discount-shipping-methods.mdx
@@ -16,7 +16,7 @@ icon: "badge-percent"
 
 ### 新しいルールを作成
 
-[Shopify管理画面](/guides/ja/get-started/installation#go-to-the-app) からアプリを開きます。サイドバーの [ルール](/guides/ja/get-started/quickstart#create-a-sample-rule) セクションに移動し、_「ルールを作成」_ をクリックします。
+[Shopify管理画面](/guides/ja/get-started/installation#アプリを開く) からアプリを開きます。サイドバーの [ルール](/guides/ja/get-started/quickstart#サンプルルールを作成) セクションに移動し、_「ルールを作成」_ をクリックします。
 
 次に、**チェックアウトルールタイプ選択画面** にリダイレクトされます。_カテゴリー「配送」→ チェックアウトルールタイプ「配送方法の割引」→ 「ルールを選択」_ を選びます。
 
@@ -43,14 +43,14 @@ icon: "badge-percent"
   alt="割引コード"
 />
 
-同じ画面で、ルールの [ステータス](/guides/ja/get-started/concepts#status) を選択します：テスト、アクティブ、または無効。ここでは、**テスト** ステータスを選択して、実際の顧客のチェックアウトに影響を与えずにルールをすぐにテストできます。
+同じ画面で、ルールの [ステータス](/guides/ja/get-started/concepts#ステータス) を選択します：テスト、アクティブ、または無効。ここでは、**テスト** ステータスを選択して、実際の顧客のチェックアウトに影響を与えずにルールをすぐにテストできます。
 
 <img
   src="/images/essentials/shipping/rule-status-discount-shipping-methods.webp"
   alt="ルールステータス"
 />
 
-同じ画面で、[組み合わせ設定](/guides/ja/get-started/concepts#combinations) を設定し、この配送割引が他の割引とどのように組み合わせられるかを制御します。次の組み合わせが可能です：
+同じ画面で、[組み合わせ設定](/guides/ja/get-started/concepts#組み合わせ) を設定し、この配送割引が他の割引とどのように組み合わせられるかを制御します。次の組み合わせが可能です：
 
 - **商品割引** – 配送割引が商品レベルの割引と併用できるようにします。商品割引も配送割引との組み合わせを許可するように設定してください。
 
@@ -61,7 +61,7 @@ icon: "badge-percent"
   alt="配送割引の組み合わせ"
 />
 
-同じ画面で、関連する [条件セット](/guides/ja/get-started/concepts#condition-set)、[条件](/guides/ja/get-started/concepts#conditions-when)、および [アクション](/guides/ja/get-started/concepts#action-what) を選択します。
+同じ画面で、関連する [条件セット](/guides/ja/get-started/concepts#コンディションセット)、[条件](/guides/ja/get-started/concepts#コンディション（「いつ」）)、および [アクション](/guides/ja/get-started/concepts#アクション（「何を」）) を選択します。
 
 > 例として、デフォルトの **条件セット1** を使用し、ルールを **常に実行** するよう設定し、すべての配送方法に対して **10% 割引** を **パーセンテージ** オプションで適用するよう構成します。割引メッセージ **「10% OFF」** がチェックアウトで顧客に表示されます。
 
@@ -84,7 +84,7 @@ icon: "badge-percent"
   alt="アクション 配送方法選択"
 />
 
-同じ画面で、[割引の最大使用回数](/guides/ja/get-started/concepts#maximum-discount-uses) セクションにて、割引コードの使用制限を有効化したり、顧客ごとに1回までに制限したり、割引コードが選択されている場合は両方を適用できます。
+同じ画面で、[割引の最大使用回数](/guides/ja/get-started/concepts#割引の最大利用回数) セクションにて、割引コードの使用制限を有効化したり、顧客ごとに1回までに制限したり、割引コードが選択されている場合は両方を適用できます。
 
 最後に、画面上部の <b>保存</b> ボタンをクリックして、ルールを作成および保存します。
 
@@ -118,7 +118,7 @@ icon: "badge-percent"
 
 <Warning>
   ルールの有効化は有料プランでのみ利用可能です。プランをまだアップグレードしていない場合は、
-  [こちら](/guides/ja/get-started/installation#upgrade-your-plan) の手順に従ってアップグレードしてください。
+  [こちら](/guides/ja/get-started/installation#プランをアップグレード) の手順に従ってアップグレードしてください。
 </Warning>
 
 <img
