--- a/guides/ja/essentials/shipping/reorder-shipping-methods.mdx
+++ b/guides/ja/essentials/shipping/reorder-shipping-methods.mdx
@@ -17,7 +17,7 @@ icon: "shuffle"
 
 ### 新しいルールを作成
 
-[ショッピファイ管理画面](/guides/ja/get-started/installation#go-to-the-app) からアプリを開きます。サイドバーの [ルール](/guides/ja/get-started/quickstart#create-a-sample-rule) セクションに移動し、_「ルールを作成」_ をクリックします。
+[ショッピファイ管理画面](/guides/ja/get-started/installation#アプリを開く) からアプリを開きます。サイドバーの [ルール](/guides/ja/get-started/quickstart#サンプルルールを作成) セクションに移動し、_「ルールを作成」_ をクリックします。
 
 その後、**チェックアウトルールタイプ選択画面** にリダイレクトされます。_カテゴリー「配送」 → チェックアウトルールタイプ「配送方法の並べ替え」 → 「ルールを選択」_ を選びます。
 
@@ -37,13 +37,13 @@ icon: "shuffle"
 
 ### ルールの設定
 
-ルールを設定するには、まずオプションで「配送方法の並べ替え」のような名前を追加して内容を説明します。次にルールの [ステータス](/guides/ja/get-started/concepts#status) を選択します: テスト中、アクティブ、非アクティブ。
+ルールを設定するには、まずオプションで「配送方法の並べ替え」のような名前を追加して内容を説明します。次にルールの [ステータス](/guides/ja/get-started/concepts#ステータス) を選択します: テスト中、アクティブ、非アクティブ。
 
 ここでは例として **テスト中** ステータスを選択し、実際の顧客のチェックアウトに影響を与えずにルールを素早くテストできます。
 
 <img src="/images/shared/rule-configure-1.webp" alt="ルール設定1" />
 
-同じ画面で、ルールを適用する場所を定義する適切な [ターゲット](/guides/ja/get-started/concepts#target) を選択します。_「配送」_ を選ぶと、**配送先住所** 入力後に表示される配送方法の順序を変更できます。次に以下を選択できます:
+同じ画面で、ルールを適用する場所を定義する適切な [ターゲット](/guides/ja/get-started/concepts#ターゲット) を選択します。_「配送」_ を選ぶと、**配送先住所** 入力後に表示される配送方法の順序を変更できます。次に以下を選択できます:
 
 - **定期購入を除くすべての出荷** – 通常配送のみにルールを適用し、定期購入商品を含む注文はスキップします。ショッピファイは定期購入商品の最安配送方法を自動選択し、他の配送方法を非表示にすることがあるため、このオプションを使用すると「配送方法なし」エラーを回避できます。
 
@@ -58,7 +58,7 @@ icon: "shuffle"
   デフォルトで選択されているオプションが最適です。後で変更可能なので、まずデフォルトから始めることができます。
 </Info>
 
-同じ画面で、関連する [条件セット](/guides/ja/get-started/concepts#condition-set)、[条件](/guides/ja/get-started/concepts#conditions-when)、[アクション](/guides/ja/get-started/concepts#action-what) を選択します。
+同じ画面で、関連する [条件セット](/guides/ja/get-started/concepts#コンディションセット)、[条件](/guides/ja/get-started/concepts#コンディション（「いつ」）)、[アクション](/guides/ja/get-started/concepts#アクション（「何を」）) を選択します。
 
 > 例として、デフォルトの条件セットを選択し、ルールを常に実行、配送価格の高い順に配送方法を並べ替える操作を選択します。
 
@@ -101,6 +101,6 @@ icon: "shuffle"
 
 <Warning>
   ルールの有効化は有料プランでのみ利用可能です。プランをまだアップグレードしていない場合は、
-  [こちら](/guides/ja/get-started/installation#upgrade-your-plan) の手順に従ってアップグレードしてください。
+  [こちら](/guides/ja/get-started/installation#プランをアップグレード) の手順に従ってアップグレードしてください。
 </Warning>
 <img src="/images/shared/activate-the-rule.webp" alt="ルールを有効化" />
