--- a/guides/ja/essentials/validation/validate-block-checkout.mdx
+++ b/guides/ja/essentials/validation/validate-block-checkout.mdx
@@ -16,7 +16,7 @@ icon: "ban"
 
 ### 新しいルールを作成
 
-[ショッピファイ管理画面](/guides/ja/get-started/installation#go-to-the-app) からアプリを開きます。サイドバーの [ルール](/guides/ja/get-started/quickstart#create-a-sample-rule) セクションに移動し、_「ルールを作成」_ をクリックします。
+[ショッピファイ管理画面](/guides/ja/get-started/installation#アプリを開く) からアプリを開きます。サイドバーの [ルール](/guides/ja/get-started/quickstart#サンプルルールを作成) セクションに移動し、_「ルールを作成」_ をクリックします。
 
 次に、**チェックアウトルールタイプ選択画面** にリダイレクトされます。_カテゴリー「検証」→ チェックアウトルールタイプ「チェックアウトの検証／ブロック」→ 「ルールを選択」_ を選びます。
 
@@ -29,7 +29,7 @@ icon: "ban"
 
 ### ルールの設定
 
-ルールを設定するには、まず任意で「チェックアウトの検証／ブロック」などの名前を付けて、何をするルールかを説明できます。次に、ルールの [ステータス](/guides/ja/get-started/concepts#status) を選択します：テスト、アクティブ、または無効。
+ルールを設定するには、まず任意で「チェックアウトの検証／ブロック」などの名前を付けて、何をするルールかを説明できます。次に、ルールの [ステータス](/guides/ja/get-started/concepts#ステータス) を選択します：テスト、アクティブ、または無効。
 
 ここでは、**テスト** ステータスを選択して、実際の顧客のチェックアウトに影響を与えずにルールをすぐにテストできます。
 
@@ -38,7 +38,7 @@ icon: "ban"
   alt="ルール設定 1"
 />
 
-同じ画面で、[このルールをトリガー](/guides/ja/get-started/concepts#trigger) の下から少なくとも1つのオプションを選択します。**チェックアウト操作中** を選ぶと、顧客がチェックアウトプロセス中にルールが実行され、**チェックアウト完了時** を選ぶと、顧客がチェックアウトを完了した際にルールが実行されます。ルールが常に必要な時に実行されるよう、両方のオプションをデフォルトで選択することを推奨します。
+同じ画面で、[このルールをトリガー](/guides/ja/get-started/concepts#トリガー) の下から少なくとも1つのオプションを選択します。**チェックアウト操作中** を選ぶと、顧客がチェックアウトプロセス中にルールが実行され、**チェックアウト完了時** を選ぶと、顧客がチェックアウトを完了した際にルールが実行されます。ルールが常に必要な時に実行されるよう、両方のオプションをデフォルトで選択することを推奨します。
 
 <Info>
   ルール設定で何を選ぶべきか不明な場合、デフォルトで事前選択されているオプションが最適な場合が多いです。デフォルトオプションから始めて、後で変更することもできます。
@@ -46,7 +46,7 @@ icon: "ban"
 
 <img src="/images/concepts/trigger.webp" alt="トリガー" />
 
-同じ画面で、関連する [条件セット](/guides/ja/get-started/concepts#condition-set)、[条件](/guides/ja/get-started/concepts#conditions-when)、および [アクション](/guides/ja/get-started/concepts#action-what) を選択します。
+同じ画面で、関連する [条件セット](/guides/ja/get-started/concepts#コンディションセット)、[条件](/guides/ja/get-started/concepts#コンディション（「いつ」）)、および [アクション](/guides/ja/get-started/concepts#アクション（「何を」）) を選択します。
 
 > 例として、**条件セット1** を使用し、ルールを **「住所2行目（アパート、スイート等）」** フィールドが **空の場合** にトリガーするよう設定し、チェックアウトをブロックするよう構成します。エラーメッセージ **「完全な住所を入力してください」** がチェックアウトの **住所2行目** フィールド下に表示され、顧客が完全な住所を入力するまで進めません。
 
@@ -114,7 +114,7 @@ icon: "ban"
 
 <Warning>
   ルールの有効化は有料プランでのみ利用可能です。プランをまだアップグレードしていない場合は、
-  [こちら](/guides/ja/get-started/installation#upgrade-your-plan) の手順に従ってアップグレードしてください。
+  [こちら](/guides/ja/get-started/installation#プランをアップグレード) の手順に従ってアップグレードしてください。
 </Warning>
 
 <img
