--- a/guides/ja/get-started/introduction.mdx
+++ b/guides/ja/get-started/introduction.mdx
@@ -26,14 +26,14 @@ BeSure チェックアウトルール は、わずか数ステップで簡単に
   <Card
     title="アプリをインストール"
     icon="download"
-    href="/guides/ja/get-started/installation#install-app"
+    href="/guides/ja/get-started/installation#アプリをインストール"
   >
     ショッピファイ アプリストアから BeSure チェックアウトルール をストアに追加します。
   </Card>
   <Card
     title="管理画面でアプリを開く"
     icon="gear"
-    href="/guides/ja/get-started/installation#go-to-the-app"
+    href="/guides/ja/get-started/installation#アプリを開く"
   >
     ショッピファイ 管理画面からアプリにアクセスし、チェックアウトロジックの設定を始めましょう。
   </Card>
@@ -47,7 +47,7 @@ BeSure チェックアウトルール は、わずか数ステップで簡単に
   <Card
     title="動作を確認"
     icon="eye"
-    href="/guides/ja/get-started/quickstart#test-the-rule"
+    href="/guides/ja/get-started/quickstart#ルールをテスト"
   >
     作成したルールは自動的にチェックアウトに適用されます。
   </Card>
