--- a/guides/ja/get-started/quickstart.mdx
+++ b/guides/ja/get-started/quickstart.mdx
@@ -70,7 +70,7 @@ icon: "rocket"
 サイドバーの **ルール** をクリックしてすべてのルールを表示します。有効化したいルールを選択し、**有効化** ボタンをクリックして有効にします。
 
 <Warning>
-  ルールの有効化は有料プランでのみ利用可能です。まだプランをアップグレードしていない場合は、[こちら](/guides/ja/get-started/installation#upgrade-your-plan) の手順に従ってアップグレードしてください。
+  ルールの有効化は有料プランでのみ利用可能です。まだプランをアップグレードしていない場合は、[こちら](/guides/ja/get-started/installation#プランをアップグレード) の手順に従ってアップグレードしてください。
 </Warning>
 
 <img src="/images/shared/activate-the-rule.webp" alt="ルールを有効化" />
