--- a/snippets/condition-set/es/previous-all-conditions-invalid.mdx
+++ b/snippets/condition-set/es/previous-all-conditions-invalid.mdx
@@ -1,6 +1,6 @@
 ## Todas las condiciones anteriores no válidas
 
-Cuando todas las condiciones anteriores son no válidas en el [bloque de regla](/guides/es/get-started/concepts#block) anterior, es decir, el bloque de regla anterior no se ejecutó, esta condición se vuelve verdadera, asegurando que la acción se active solo si ninguna de las condiciones anteriores se cumple.
+Cuando todas las condiciones anteriores son no válidas en el [bloque de regla](/guides/es/get-started/concepts#bloque) anterior, es decir, el bloque de regla anterior no se ejecutó, esta condición se vuelve verdadera, asegurando que la acción se active solo si ninguna de las condiciones anteriores se cumple.
 
 <Note>Disponible solo cuando existe al menos un bloque de regla anterior.</Note>
 
