--- a/guides/de/essentials/discount/discount-order-amount.mdx
+++ b/guides/de/essentials/discount/discount-order-amount.mdx
@@ -20,8 +20,8 @@ Die folgenden Schritte zeigen, wie Sie mithilfe der App eine **Bestellbetrag rab
 
 ### Neue Regel erstellen
 
-Öffnen Sie die App in Ihrem [Shopify-Adminbereich](/guides/de/get-started/installation#go-to-the-app).  
-Gehen Sie in der Seitenleiste zum Abschnitt [Regeln](/guides/de/get-started/quickstart#create-a-sample-rule) und klicken Sie auf _"Regel erstellen"_.
+Öffnen Sie die App in Ihrem [Shopify-Adminbereich](/guides/de/get-started/installation#app-öffnen).  
+Gehen Sie in der Seitenleiste zum Abschnitt [Regeln](/guides/de/get-started/quickstart#erstellen-einer-beispielregel) und klicken Sie auf _"Regel erstellen"_.
 
 Dann werden Sie zum Bildschirm **Checkout-Regeltyp auswählen** weitergeleitet.  
 Wählen Sie _Kategorie "Rabatt" → Checkout-Regeltyp "Bestellbetrag rabattieren" → Klicken Sie auf „Regel auswählen“_.
@@ -57,7 +57,7 @@ Hier wählen wir den Status **Testing**, damit wir die Regel schnell testen kön
   alt="Regelstatus"
 />
 
-Als Nächstes konfigurieren Sie auf demselben Bildschirm die [Kombinationen](/guides/de/get-started/concepts#combinations)-Einstellungen, um zu steuern, wie dieser Bestellrabatt mit **anderen Rabatten** interagiert. Sie können zulassen, dass er kombiniert wird mit:
+Als Nächstes konfigurieren Sie auf demselben Bildschirm die [Kombinationen](/guides/de/get-started/concepts#kombinationen)-Einstellungen, um zu steuern, wie dieser Bestellrabatt mit **anderen Rabatten** interagiert. Sie können zulassen, dass er kombiniert wird mit:
 
 - **Produktrabatten** – Dadurch kann der Bestellrabatt zusammen mit produktspezifischen Rabatten verwendet werden. Stellen Sie sicher, dass Produktrabatte auch so konfiguriert sind, dass sie mit Bestellrabatten kombiniert werden können.
 
@@ -70,7 +70,7 @@ Als Nächstes konfigurieren Sie auf demselben Bildschirm die [Kombinationen](/gu
   alt="Kombinationen"
 />
 
-Als Nächstes konfigurieren Sie auf demselben Bildschirm die [Strategie](/guides/de/get-started/concepts#strategy)-Einstellungen, um zu steuern, wie das System mit mehreren Rabattblöcken umgeht.  
+Als Nächstes konfigurieren Sie auf demselben Bildschirm die [Strategie](/guides/de/get-started/concepts#strategie)-Einstellungen, um zu steuern, wie das System mit mehreren Rabattblöcken umgeht.  
 Sie können **Erste** auswählen, wodurch nur der erste Rabatt angewendet wird, der die Bedingungen erfüllt, unabhängig von besseren Rabatten, die später folgen könnten.  
 Oder Sie wählen **Maximum**, wodurch alle Rabattblöcke ausgewertet und derjenige mit der höchsten Reduktion angewendet wird.
 
@@ -79,7 +79,7 @@ Oder Sie wählen **Maximum**, wodurch alle Rabattblöcke ausgewertet und derjeni
   alt="Strategie Bestellrabatt"
 />
 
-Als Nächstes wählen Sie auf demselben Bildschirm die relevante [Bedingung](/guides/de/get-started/concepts#conditions-when) und [Aktion](/guides/de/get-started/concepts#action-what).
+Als Nächstes wählen Sie auf demselben Bildschirm die relevante [Bedingung](/guides/de/get-started/concepts#bedingungen-das-“wann”) und [Aktion](/guides/de/get-started/concepts#aktion-das-“was”).
 
 > Als Beispiel stellen wir hier die Regel so ein, dass sie immer ausgeführt wird, und konfigurieren sie so, dass ein **10%-Rabatt** mit der Option Prozentsatz angewendet wird.  
 > Die Rabattnachricht **"10% RABATT"** wird den Kunden beim Checkout angezeigt.
@@ -97,7 +97,7 @@ Alle anderen Methoden – **Prozentsatz unter Ausschluss dieser Produkte, Prozen
   alt="Aktionstyp Rabatt"
 />
 
-Als Nächstes können Sie auf demselben Bildschirm im Abschnitt [Maximale Rabattnutzung](/guides/de/get-started/concepts#maximum-discount-uses) optional ein Nutzungslimit für den Rabattcode aktivieren, ihn auf eine einmalige Nutzung pro Kunde beschränken oder beides anwenden, falls ein Rabattcode ausgewählt ist.
+Als Nächstes können Sie auf demselben Bildschirm im Abschnitt [Maximale Rabattnutzung](/guides/de/get-started/concepts#maximale-rabattnutzung) optional ein Nutzungslimit für den Rabattcode aktivieren, ihn auf eine einmalige Nutzung pro Kunde beschränken oder beides anwenden, falls ein Rabattcode ausgewählt ist.
 
 Klicken Sie abschließend auf die <b>Speichern</b>-Schaltfläche oben, um Ihre Regel zu erstellen und zu speichern.
 
@@ -137,7 +137,7 @@ Wählen Sie die Regel aus, die Sie aktivieren möchten, und klicken Sie dann auf
 <Warning>
   Die Regelaktivierung ist nur in kostenpflichtigen Plänen verfügbar. Wenn Sie
   Ihren Plan noch nicht aktualisiert haben, folgen Sie den Anweisungen
-  [hier](/guides/de/get-started/installation#upgrade-your-plan), um ein Upgrade
+  [hier](/guides/de/get-started/installation#plan-aktualisieren), um ein Upgrade
   durchzuführen.
 </Warning>
 <img
