--- a/guides/de/essentials/payment/hide-express-checkout-options.mdx
+++ b/guides/de/essentials/payment/hide-express-checkout-options.mdx
@@ -24,7 +24,7 @@ Die folgenden Schritte zeigen, wie man eine **Express-Checkout-Optionen ausblend
 
 ### Neue Regel erstellen
 
-Öffnen Sie die App in Ihrem [Shopify-Adminbereich](/guides/de/get-started/installation#go-to-the-app). Gehen Sie in der Seitenleiste zum Abschnitt [Regeln](/guides/de/get-started/quickstart#create-a-sample-rule) und klicken Sie auf _"Regel erstellen"_.
+Öffnen Sie die App in Ihrem [Shopify-Adminbereich](/guides/de/get-started/installation#app-öffnen). Gehen Sie in der Seitenleiste zum Abschnitt [Regeln](/guides/de/get-started/quickstart#erstellen-einer-beispielregel) und klicken Sie auf _"Regel erstellen"_.
 
 Dann werden Sie zum Bildschirm **Checkout-Regeltyp auswählen** weitergeleitet. Wählen Sie _Kategorie "Zahlung" → Checkout-Regeltyp "Express-Checkout-Optionen ausblenden" → Klicken Sie auf „Regel auswählen“_.
 
@@ -115,7 +115,7 @@ Klicken Sie in der Seitenleiste auf **Regeln**, um alle Regeln anzuzeigen. Wähl
 <Warning>
   Die Regelaktivierung ist nur in kostenpflichtigen Plänen verfügbar. Wenn Sie
   Ihren Plan noch nicht aktualisiert haben, folgen Sie den Anweisungen
-  [hier](/guides/de/get-started/installation#upgrade-your-plan), um ein Upgrade
+  [hier](/guides/de/get-started/installation#plan-aktualisieren), um ein Upgrade
   durchzuführen.
 </Warning>
 
