--- a/guides/de/essentials/payment/reorder-payment-methods.mdx
+++ b/guides/de/essentials/payment/reorder-payment-methods.mdx
@@ -17,8 +17,8 @@ Die folgenden Schritte zeigen, wie man mithilfe der App eine **Zahlungsmethoden 
 
 ### Neue Regel erstellen
 
-Öffnen Sie die App in Ihrem [Shopify-Adminbereich](/guides/de/get-started/installation#go-to-the-app).  
-Gehen Sie in der Seitenleiste zum Abschnitt [Regeln](/guides/de/get-started/quickstart#create-a-sample-rule) und klicken Sie auf _"Regel erstellen"_.
+Öffnen Sie die App in Ihrem [Shopify-Adminbereich](/guides/de/get-started/installation#app-öffnen).  
+Gehen Sie in der Seitenleiste zum Abschnitt [Regeln](/guides/de/get-started/quickstart#erstellen-einer-beispielregel) und klicken Sie auf _"Regel erstellen"_.
 
 Dann werden Sie zum Bildschirm **Checkout-Regeltyp auswählen** weitergeleitet.  
 Wählen Sie _Kategorie "Zahlung" → Checkout-Regeltyp "Zahlungsmethoden neu anordnen" → Klicken Sie auf „Regel auswählen“_.
@@ -50,7 +50,7 @@ Hier wählen wir den Status **Testing**, damit wir die Regel schnell testen kön
   alt="Regel konfigurieren 1"
 />
 
-Als Nächstes wählen Sie auf demselben Bildschirm das relevante [Bedingungsset](/guides/de/get-started/concepts#condition-set), die [Bedingung](/guides/de/get-started/concepts#conditions-when) und die [Aktion](/guides/de/get-started/concepts#action-what) aus.
+Als Nächstes wählen Sie auf demselben Bildschirm das relevante [Bedingungsset](/guides/de/get-started/concepts#bedingungsset), die [Bedingung](/guides/de/get-started/concepts#bedingungen-das-“wann”) und die [Aktion](/guides/de/get-started/concepts#aktion-das-“was”) aus.
 
 > Als Beispiel wählen wir das Standard-Bedingungsset 1, stellen die Regel so ein, dass sie immer ausgeführt wird, und wählen die Operation **Alphabetische Reihenfolge**, indem wir **Name A bis Z (aufsteigend)** auswählen, um die Zahlungsmethoden neu anzuordnen.
 
@@ -129,7 +129,7 @@ Wählen Sie die Regel aus, die Sie aktivieren möchten, und klicken Sie dann auf
 <Warning>
   Die Regelaktivierung ist nur in kostenpflichtigen Plänen verfügbar. Wenn Sie
   Ihren Plan noch nicht aktualisiert haben, folgen Sie den Anweisungen
-  [hier](/guides/de/get-started/installation#upgrade-your-plan), um ein Upgrade
+  [hier](/guides/de/get-started/installation#plan-aktualisieren), um ein Upgrade
   durchzuführen.
 </Warning>
 
