--- a/guides/de/essentials/shipping/hide-shipping-methods.mdx
+++ b/guides/de/essentials/shipping/hide-shipping-methods.mdx
@@ -16,7 +16,7 @@ Die folgenden Schritte zeigen, wie man eine **Versandmethoden ausblenden-Regel**
 
 ### Neue Regel erstellen
 
-Öffnen Sie die App in Ihrem [Shopify-Adminbereich](/guides/de/get-started/installation#go-to-the-app). Gehen Sie in der Seitenleiste zum Abschnitt [Regeln](/guides/de/get-started/quickstart#create-a-sample-rule) und klicken Sie auf _"Regel erstellen"_.
+Öffnen Sie die App in Ihrem [Shopify-Adminbereich](/guides/de/get-started/installation#app-öffnen). Gehen Sie in der Seitenleiste zum Abschnitt [Regeln](/guides/de/get-started/quickstart#erstellen-einer-beispielregel) und klicken Sie auf _"Regel erstellen"_.
 
 Anschließend werden Sie zum Bildschirm **Checkout-Regeltyp auswählen** weitergeleitet. Wählen Sie _Kategorie "Versand" → Checkout-Regeltyp "Versandmethoden ausblenden" → Klicken Sie auf "Regel auswählen"_.
 
@@ -45,7 +45,7 @@ Hier wählen wir den Status **Testing**, damit wir die Regel schnell testen kön
   alt="Regel konfigurieren 1"
 />
 
-Wählen Sie anschließend auf demselben Bildschirm das passende [Ziel](/guides/de/get-started/concepts#target), um zu definieren, wo die Regel angewendet werden soll. Wir können _"Versand"_ wählen, um Versandmethoden auszublenden, die nach Eingabe einer **Versandadresse** angezeigt werden. Dann können wir auswählen:
+Wählen Sie anschließend auf demselben Bildschirm das passende [Ziel](/guides/de/get-started/concepts#ziel), um zu definieren, wo die Regel angewendet werden soll. Wir können _"Versand"_ wählen, um Versandmethoden auszublenden, die nach Eingabe einer **Versandadresse** angezeigt werden. Dann können wir auswählen:
 
 - **Alle Sendungen außer Abonnements** – wendet die Regel nur auf reguläre Sendungen an und überspringt alle Bestellungen mit Abonnementprodukten. Dies ist nützlich, da Shopify automatisch die günstigste Versandmethode für Abonnementprodukte auswählt und alle anderen Versandmethoden ausblendet. Das Ausblenden dieser günstigsten Versandmethode kann den Fehler "Kein Versand verfügbar" verursachen. Deshalb empfehlen wir, diese Option zu verwenden, wenn Sie Abonnementprodukte haben, um diesen Fehler zu vermeiden.
 
@@ -55,7 +55,7 @@ Oder wir können _"Abholung"_ wählen, wenn wir möchten, dass die Regel speziel
 
 <img src="/images/essentials/shipping/select-target.webp" alt="Ziel auswählen" />
 
-Wählen Sie anschließend den relevanten [Bedingungssatz](/guides/de/get-started/concepts#condition-set), die [Bedingung](/guides/de/get-started/concepts#conditions-when) und die [Aktion](/guides/de/get-started/concepts#action-what).
+Wählen Sie anschließend den relevanten [Bedingungssatz](/guides/de/get-started/concepts#bedingungsset), die [Bedingung](/guides/de/get-started/concepts#bedingungen-das-“wann”) und die [Aktion](/guides/de/get-started/concepts#aktion-das-“was”).
 
 > Als Beispiel verwenden wir hier den Standard **Bedingungssatz 1**, setzen die Regel auf **Immer** ausführen und konfigurieren sie so, dass **Versandmethoden ausgeblendet** werden, die **"Express Worldwide"** enthalten.
 
@@ -95,7 +95,7 @@ Nach dem Testen können wir die Regel aktivieren, damit sie Änderungen am Check
 Klicken Sie in der Seitenleiste auf **Regeln**, um alle Regeln anzuzeigen. Wählen Sie die Regel aus, die Sie aktivieren möchten, und klicken Sie dann auf **Aktivieren**, um sie zu aktivieren.
 
 <Warning>
-  Die Regelaktivierung ist nur in kostenpflichtigen Plänen verfügbar. Wenn Sie Ihren Plan noch nicht aktualisiert haben, folgen Sie den Anweisungen [hier](/guides/de/get-started/installation#upgrade-your-plan), um ein Upgrade durchzuführen.
+  Die Regelaktivierung ist nur in kostenpflichtigen Plänen verfügbar. Wenn Sie Ihren Plan noch nicht aktualisiert haben, folgen Sie den Anweisungen [hier](/guides/de/get-started/installation#plan-aktualisieren), um ein Upgrade durchzuführen.
 </Warning>
 
 <img
