--- a/guides/fr/essentials/discount/discount-order-amount.mdx
+++ b/guides/fr/essentials/discount/discount-order-amount.mdx
@@ -19,8 +19,8 @@ Les étapes suivantes montrent comment créer et configurer une règle **Remise 
 
 ### Créer une nouvelle règle
 
-Depuis votre [administration Shopify](/guides/fr/get-started/installation#go-to-the-app), ouvrez l’application.  
-Dans la barre latérale, allez à la section [Règles](/guides/fr/get-started/quickstart#create-a-sample-rule) et cliquez sur _« Créer une règle »_.
+Depuis votre [administration Shopify](/guides/fr/get-started/installation#accéder-à-l’application), ouvrez l’application.  
+Dans la barre latérale, allez à la section [Règles](/guides/fr/get-started/quickstart#créer-une-règle-d’exemple) et cliquez sur _« Créer une règle »_.
 
 Ensuite, vous serez redirigé vers l’écran **Sélectionner le type de règle de passage en caisse**.  
 Choisissez _catégorie « Remise » → sélectionnez le type de règle « Remise sur le montant de la commande » → cliquez sur « Sélectionner la règle »_.
@@ -48,7 +48,7 @@ Ou, si vous préférez appliquer la remise avec un code de réduction, cliquez s
   alt="Code de Réduction"
 />
 
-Ensuite, sur le même écran, sélectionnez le [statut](/guides/fr/get-started/concepts#status) de la règle : Mise à l’essai, Actif ou Désactivé.  
+Ensuite, sur le même écran, sélectionnez le [statut](/guides/fr/get-started/concepts#statut) de la règle : Mise à l’essai, Actif ou Désactivé.  
 Ici, nous allons choisir le statut **Mise à l’essai**, afin de tester rapidement la règle sans affecter le passage en caisse des clients réels.
 
 <img
@@ -56,7 +56,7 @@ Ici, nous allons choisir le statut **Mise à l’essai**, afin de tester rapidem
   alt="Statut de la règle"
 />
 
-Ensuite, configurez les paramètres de [Combinaisons](/guides/fr/get-started/concepts#combinations) pour contrôler comment cette remise sur la commande interagit avec **d’autres remises**. Vous pouvez autoriser sa combinaison avec :
+Ensuite, configurez les paramètres de [Combinaisons](/guides/fr/get-started/concepts#combinaisons) pour contrôler comment cette remise sur la commande interagit avec **d’autres remises**. Vous pouvez autoriser sa combinaison avec :
 
 - **Remises produit** – Cela permet d’utiliser la remise de commande avec des remises au niveau produit. Assurez-vous que les remises produit sont également configurées pour se combiner avec les remises de commande.
 - **Remises de commande** – Cela permet d’appliquer plusieurs remises au niveau de la commande en même temps. Assurez-vous que les autres remises de commande autorisent également la combinaison.
@@ -67,7 +67,7 @@ Ensuite, configurez les paramètres de [Combinaisons](/guides/fr/get-started/con
   alt="Combinaisons"
 />
 
-Ensuite, configurez les paramètres de [Stratégie](/guides/fr/get-started/concepts#strategy) pour contrôler la gestion de plusieurs blocs de remise.  
+Ensuite, configurez les paramètres de [Stratégie](/guides/fr/get-started/concepts#stratégie) pour contrôler la gestion de plusieurs blocs de remise.  
 Vous pouvez choisir **Première**, qui applique uniquement la première remise répondant aux conditions, en ignorant les meilleures remises qui pourraient apparaître ensuite, ou **Maximale**, qui évalue tous les blocs de remise et applique celui qui offre la plus grande réduction.
 
 <img
@@ -75,7 +75,7 @@ Vous pouvez choisir **Première**, qui applique uniquement la première remise r
   alt="Stratégie Remise de Commande"
 />
 
-Ensuite, sélectionnez la [condition](/guides/fr/get-started/concepts#conditions-when) et l’[action](/guides/fr/get-started/concepts#action-what) pertinentes.
+Ensuite, sélectionnez la [condition](/guides/fr/get-started/concepts#conditions-le-«-quand-») et l’[action](/guides/fr/get-started/concepts#action-le-«-quoi-») pertinentes.
 
 > Par exemple, ici nous définissons la règle pour s’exécuter **Toujours** et la configurons pour appliquer une **remise de 10 %** en utilisant l’option **Pourcentage**. Le message de réduction **« 10 % DE REMISE »** sera affiché aux clients au passage en caisse.
 
@@ -92,7 +92,7 @@ Toutes les autres méthodes (**Pourcentage en excluant ces produits, Pourcentage
   alt="Type d’Action Remise"
 />
 
-Ensuite, dans la section [Nombre maximum d’utilisations de la remise](/guides/fr/get-started/concepts#maximum-discount-uses), vous pouvez éventuellement définir une limite d’utilisation du code de réduction, la limiter à une utilisation par client, ou appliquer les deux si un code de réduction est choisi.
+Ensuite, dans la section [Nombre maximum d’utilisations de la remise](/guides/fr/get-started/concepts#nombre-maximal-d’utilisations-de-la-réduction), vous pouvez éventuellement définir une limite d’utilisation du code de réduction, la limiter à une utilisation par client, ou appliquer les deux si un code de réduction est choisi.
 
 Enfin, cliquez sur le bouton <b>Enregistrer</b> en haut pour créer et enregistrer votre règle.
 
@@ -131,7 +131,7 @@ Sélectionnez la règle que vous souhaitez activer, puis cliquez sur le bouton *
 <Warning>
   L’activation des règles n’est disponible que dans les forfaits payants.  
   Si vous n’avez pas encore mis à niveau votre forfait, suivez les instructions
-  [ici](/guides/fr/get-started/installation#upgrade-your-plan) pour le mettre à niveau.
+  [ici](/guides/fr/get-started/installation#mettre-à-niveau-votre-forfait) pour le mettre à niveau.
 </Warning>
 
 <img
