--- a/guides/fr/essentials/payment/rename-payment-methods.mdx
+++ b/guides/fr/essentials/payment/rename-payment-methods.mdx
@@ -17,7 +17,7 @@ Les étapes suivantes montrent comment créer et configurer une règle **Renomme
 
 ### Créer une nouvelle règle
 
-Depuis votre [admin Shopify](/guides/fr/get-started/installation#go-to-the-app), ouvrez l’application. Dans la barre latérale, allez à la section [Règles](/guides/fr/get-started/quickstart#create-a-sample-rule) et cliquez sur _"Créer une règle"_.
+Depuis votre [admin Shopify](/guides/fr/get-started/installation#accéder-à-l’application), ouvrez l’application. Dans la barre latérale, allez à la section [Règles](/guides/fr/get-started/quickstart#créer-une-règle-d’exemple) et cliquez sur _"Créer une règle"_.
 
 Ensuite, vous serez redirigé vers l’écran **Sélectionner le type de règle de passage en caisse**. Choisissez _catégorie "Paiement" → type de règle de passage en caisse "Renommer les modes de paiement" → cliquez sur “Sélectionner la règle”_.
 
@@ -30,7 +30,7 @@ Ensuite, vous arriverez sur l’écran **Créer une nouvelle règle de renommage
 
 ### Configuration de la règle
 
-Pour configurer la règle, nous pouvons d’abord, facultativement, ajouter un nom tel que "Renommer les modes de paiement" pour décrire ce qu’elle fait. Ensuite, sélectionnez le [statut](/guides/fr/get-started/concepts#status) de la règle : Mise à l’essai, Active ou Désactivée.
+Pour configurer la règle, nous pouvons d’abord, facultativement, ajouter un nom tel que "Renommer les modes de paiement" pour décrire ce qu’elle fait. Ensuite, sélectionnez le [statut](/guides/fr/get-started/concepts#statut) de la règle : Mise à l’essai, Active ou Désactivée.
 
 Ici, nous allons choisir le statut **Mise à l’essai**, afin de pouvoir rapidement tester la règle sans affecter le passage en caisse des vrais clients.
 
@@ -39,7 +39,7 @@ Ici, nous allons choisir le statut **Mise à l’essai**, afin de pouvoir rapide
   alt="Configuration de la règle 1"
 />
 
-Ensuite, sur le même écran, sélectionnez l’[ensemble de conditions](/guides/fr/get-started/concepts#condition-set) pertinent, la [condition](/guides/fr/get-started/concepts#conditions-when) et l’[action](/guides/fr/get-started/concepts#action-what).
+Ensuite, sur le même écran, sélectionnez l’[ensemble de conditions](/guides/fr/get-started/concepts#ensemble-de-conditions) pertinent, la [condition](/guides/fr/get-started/concepts#conditions-le-«-quand-») et l’[action](/guides/fr/get-started/concepts#action-le-«-quoi-»).
 
 > À titre d’exemple, nous utilisons **l’ensemble de conditions 1**, définissons la règle pour s’exécuter **Toujours**, et la configurons pour renommer le mode de paiement **"Paiement à la livraison (COD)"** en **"Payer en espèces"**.
 
@@ -85,7 +85,7 @@ Cliquez sur **Règles** dans la barre latérale pour afficher toutes les règles
 <Warning>
   L’activation des règles n’est disponible que sur les forfaits payants. Si vous
   n’avez pas encore mis à niveau votre forfait, suivez les instructions
-  [ici](/guides/fr/get-started/installation#upgrade-your-plan) pour effectuer la
+  [ici](/guides/fr/get-started/installation#mettre-à-niveau-votre-forfait) pour effectuer la
   mise à niveau.
 </Warning>
 <img
