--- a/guides/fr/essentials/shipping/discount-shipping-methods.mdx
+++ b/guides/fr/essentials/shipping/discount-shipping-methods.mdx
@@ -16,7 +16,7 @@ Les étapes suivantes montrent comment créer et configurer une règle **Réduct
 
 ### Créer une nouvelle règle
 
-Depuis votre [admin Shopify](/guides/fr/get-started/installation#go-to-the-app), ouvrez l’application. Dans la barre latérale, allez à la section [Règles](/guides/fr/get-started/quickstart#create-a-sample-rule) et cliquez sur _"Créer une règle"_.
+Depuis votre [admin Shopify](/guides/fr/get-started/installation#accéder-à-l’application), ouvrez l’application. Dans la barre latérale, allez à la section [Règles](/guides/fr/get-started/quickstart#créer-une-règle-d’exemple) et cliquez sur _"Créer une règle"_.
 
 Ensuite, vous serez redirigé vers l’écran **Sélectionner le type de règle de passage en caisse**. Choisissez _catégorie "Expédition" → sélectionnez le type de règle de passage en caisse "Réduction sur les méthodes d’expédition" → cliquez sur “Sélectionner la règle”_.
 
@@ -43,7 +43,7 @@ Ou, si vous préférez appliquer la réduction via un code de réduction, clique
   alt="Code de réduction"
 />
 
-Ensuite, sur le même écran, sélectionnez le [statut](/guides/fr/get-started/concepts#status) de la règle : Mise à l’essai, Actif ou Désactivé.  
+Ensuite, sur le même écran, sélectionnez le [statut](/guides/fr/get-started/concepts#statut) de la règle : Mise à l’essai, Actif ou Désactivé.  
 Ici, nous allons choisir le statut **Mise à l’essai**, afin de tester rapidement la règle sans affecter le passage en caisse des clients réels.
 
 <img
@@ -51,7 +51,7 @@ Ici, nous allons choisir le statut **Mise à l’essai**, afin de tester rapidem
   alt="Statut de la règle"
 />
 
-Ensuite, sur le même écran, configurez les paramètres de [Combinaisons](/guides/fr/get-started/concepts#combinations) pour contrôler comment cette réduction d’expédition interagit avec d’autres réductions. Vous pouvez choisir de l’autoriser à se combiner avec :
+Ensuite, sur le même écran, configurez les paramètres de [Combinaisons](/guides/fr/get-started/concepts#combinaisons) pour contrôler comment cette réduction d’expédition interagit avec d’autres réductions. Vous pouvez choisir de l’autoriser à se combiner avec :
 
 - **Réductions sur les produits** – Cela permet d’utiliser la réduction sur l’expédition en même temps que toute réduction au niveau produit. Assurez-vous que les réductions produit soient également configurées pour se combiner avec les réductions d’expédition.
 
@@ -62,7 +62,7 @@ Ensuite, sur le même écran, configurez les paramètres de [Combinaisons](/guid
   alt="Combinaisons Réduction sur les méthodes d’expédition"
 />
 
-Ensuite, sur le même écran, sélectionnez l’[ensemble de conditions](/guides/fr/get-started/concepts#condition-set) pertinent, la [condition](/guides/fr/get-started/concepts#conditions-when), et l’[action](/guides/fr/get-started/concepts#action-what).
+Ensuite, sur le même écran, sélectionnez l’[ensemble de conditions](/guides/fr/get-started/concepts#ensemble-de-conditions) pertinent, la [condition](/guides/fr/get-started/concepts#conditions-le-«-quand-»), et l’[action](/guides/fr/get-started/concepts#action-le-«-quoi-»).
 
 > Par exemple, ici nous utilisons l’**Ensemble de conditions 1** par défaut, définissons la règle pour qu’elle s’exécute **Toujours**, et la configurons pour appliquer une **réduction de 10 %** sur toutes les méthodes d’expédition en utilisant l’option **Pourcentage**. Le message de réduction **"10% OFF"** sera affiché aux clients lors du passage en caisse.
 
@@ -85,7 +85,7 @@ La réduction peut également être appliquée uniquement à certaines méthodes
   alt="Sélection des méthodes d’expédition pour l’action"
 />
 
-Ensuite, sur le même écran, dans la section [Utilisations maximales de la réduction](/guides/fr/get-started/concepts#maximum-discount-uses), vous pouvez éventuellement activer une limite d’utilisation pour le code de réduction, la limiter à une utilisation par client, ou appliquer les deux si un code de réduction est sélectionné.
+Ensuite, sur le même écran, dans la section [Utilisations maximales de la réduction](/guides/fr/get-started/concepts#nombre-maximal-d’utilisations-de-la-réduction), vous pouvez éventuellement activer une limite d’utilisation pour le code de réduction, la limiter à une utilisation par client, ou appliquer les deux si un code de réduction est sélectionné.
 
 Enfin, cliquez sur le bouton <b>Enregistrer</b> en haut pour créer et enregistrer votre règle.
 
@@ -122,7 +122,7 @@ Cliquez sur **Règles** dans la barre latérale pour afficher toutes les règles
 <Warning>
   L’activation de la règle n’est disponible que sur les forfaits payants. Si vous n’avez pas encore
   mis à niveau votre forfait, suivez les instructions
-  [ici](/guides/fr/get-started/installation#upgrade-your-plan) pour le mettre à niveau.
+  [ici](/guides/fr/get-started/installation#mettre-à-niveau-votre-forfait) pour le mettre à niveau.
 </Warning>
 <img
   src="/images/essentials/shipping/activate-the-rule-discount-shipping-methods.webp"
