--- a/guides/fr/essentials/shipping/rename-shipping-methods.mdx
+++ b/guides/fr/essentials/shipping/rename-shipping-methods.mdx
@@ -16,7 +16,7 @@ Les étapes suivantes montrent comment créer et configurer une règle **Renomme
 
 ### Créer une nouvelle règle
 
-Depuis votre [admin Shopify](/guides/fr/get-started/installation#go-to-the-app), ouvrez l’application. Dans la barre latérale, allez à la section [Règles](/guides/fr/get-started/quickstart#create-a-sample-rule) et cliquez sur _"Créer une règle"_.
+Depuis votre [admin Shopify](/guides/fr/get-started/installation#accéder-à-l’application), ouvrez l’application. Dans la barre latérale, allez à la section [Règles](/guides/fr/get-started/quickstart#créer-une-règle-d’exemple) et cliquez sur _"Créer une règle"_.
 
 Ensuite, vous serez redirigé vers l’écran **Sélectionner le type de règle de paiement**. Choisissez _catégorie "Expédition" → sélectionner le type de règle de paiement "Renommer les modes d’expédition" → cliquer sur “Sélectionner la règle”_.
 
@@ -29,7 +29,7 @@ Ensuite, vous arriverez sur l’écran **Créer une nouvelle règle Renommer les
 
 ### Configuration de la règle
 
-Pour configurer la règle, vous pouvez d’abord ajouter facultativement un nom tel que "Renommer les modes d’expédition" pour décrire ce qu’elle fait. Ensuite, sélectionnez le [statut](/guides/fr/get-started/concepts#status) de la règle : **Mise à l’essai**, **Active** ou **Désactivée**.
+Pour configurer la règle, vous pouvez d’abord ajouter facultativement un nom tel que "Renommer les modes d’expédition" pour décrire ce qu’elle fait. Ensuite, sélectionnez le [statut](/guides/fr/get-started/concepts#statut) de la règle : **Mise à l’essai**, **Active** ou **Désactivée**.
 
 Ici, nous allons choisir le **statut de mise à l’essai**, afin de pouvoir rapidement tester la règle sans affecter le paiement des vrais clients.
 
@@ -38,7 +38,7 @@ Ici, nous allons choisir le **statut de mise à l’essai**, afin de pouvoir rap
   alt="Configuration de la règle 1"
 />
 
-Ensuite, sur le même écran, sélectionnez la [cible](/guides/fr/get-started/concepts#target) appropriée pour définir où la règle doit s’appliquer. Nous pouvons choisir _"Expédier"_ pour renommer les modes d’expédition affichés après la saisie d’une **adresse de livraison**. Ensuite, nous pouvons sélectionner :
+Ensuite, sur le même écran, sélectionnez la [cible](/guides/fr/get-started/concepts#cible) appropriée pour définir où la règle doit s’appliquer. Nous pouvons choisir _"Expédier"_ pour renommer les modes d’expédition affichés après la saisie d’une **adresse de livraison**. Ensuite, nous pouvons sélectionner :
 
 - **Tous les envois sauf les abonnements** – applique la règle uniquement aux envois réguliers et ignore les commandes contenant des produits par abonnement. Ceci est utile car Shopify peut automatiquement choisir le mode d’expédition le moins cher pour les produits par abonnement et masquer tous les autres modes. Masquer ce mode le moins cher peut provoquer une erreur "aucune expédition disponible". C’est pourquoi nous recommandons d’utiliser cette option si vous avez des produits par abonnement pour éviter cette erreur.
 
@@ -51,7 +51,7 @@ Le choix de _"Retrait"_ n’est pas disponible pour ce type de règle pour le mo
   alt="Sélectionner la cible"
 />
 
-Ensuite, sur le même écran, sélectionnez l’[ensemble de conditions](/guides/fr/get-started/concepts#condition-set), la [condition](/guides/fr/get-started/concepts#conditions-when) et l’[action](/guides/fr/get-started/concepts#action-what) pertinentes.
+Ensuite, sur le même écran, sélectionnez l’[ensemble de conditions](/guides/fr/get-started/concepts#ensemble-de-conditions), la [condition](/guides/fr/get-started/concepts#conditions-le-«-quand-») et l’[action](/guides/fr/get-started/concepts#action-le-«-quoi-») pertinentes.
 
 > Par exemple, nous utilisons l’**Ensemble de conditions 1**, configurons la règle pour s’exécuter **Toujours**, et la configurons pour renommer les modes d’expédition qui contiennent **"International Shipping"** en **"Local Shipping"**.
 
@@ -97,7 +97,7 @@ Cliquez sur **Règles** dans la barre latérale pour afficher toutes les règles
 <Warning>
   L’activation de règle est uniquement disponible sur les forfaits payants. Si
   vous n’avez pas encore mis à niveau votre forfait, suivez les instructions
-  [ici](/guides/fr/get-started/installation#upgrade-your-plan) pour effectuer la mise à niveau.
+  [ici](/guides/fr/get-started/installation#mettre-à-niveau-votre-forfait) pour effectuer la mise à niveau.
 </Warning>
 <img
   src="/images/essentials/shipping/activate-the-rule-rename-shipping-methods.webp"
