--- a/guides/fr/essentials/shipping/reorder-shipping-methods.mdx
+++ b/guides/fr/essentials/shipping/reorder-shipping-methods.mdx
@@ -17,7 +17,7 @@ Les étapes suivantes montrent comment créer et configurer une règle **Réorga
 
 ### Créer une nouvelle règle
 
-Depuis votre [admin Shopify](/guides/fr/get-started/installation#go-to-the-app), ouvrez l’application. Dans la barre latérale, allez à la section [Règles](/guides/fr/get-started/quickstart#create-a-sample-rule) et cliquez sur _"Créer une règle"_.
+Depuis votre [admin Shopify](/guides/fr/get-started/installation#accéder-à-l’application), ouvrez l’application. Dans la barre latérale, allez à la section [Règles](/guides/fr/get-started/quickstart#créer-une-règle-d’exemple) et cliquez sur _"Créer une règle"_.
 
 Ensuite, vous serez redirigé vers l’écran **Sélectionner le type de règle de passage en caisse**. Choisissez _catégorie "Expédition" → type de règle de passage en caisse "Réorganiser les modes d’expédition" → cliquez sur “Sélectionner la règle”_.
 
@@ -37,13 +37,13 @@ Ensuite, vous arriverez sur l’écran **Créer une nouvelle règle de réorgani
 
 ### Configuration de la règle
 
-Pour configurer la règle, nous pouvons d’abord, facultativement, ajouter un nom tel que "Réorganiser les modes d’expédition" pour décrire ce qu’elle fait. Ensuite, sélectionnez le [statut](/guides/fr/get-started/concepts#status) de la règle : Mise à l’essai, Active ou Désactivée.
+Pour configurer la règle, nous pouvons d’abord, facultativement, ajouter un nom tel que "Réorganiser les modes d’expédition" pour décrire ce qu’elle fait. Ensuite, sélectionnez le [statut](/guides/fr/get-started/concepts#statut) de la règle : Mise à l’essai, Active ou Désactivée.
 
 Ici, à titre d’exemple, nous allons choisir le statut **Mise à l’essai**, afin de pouvoir rapidement tester la règle sans affecter le passage en caisse des vrais clients.
 
 <img src="/images/shared/rule-configure-1.webp" alt="Configuration de la règle 1" />
 
-Ensuite, sur le même écran, sélectionnez la [Cible](/guides/fr/get-started/concepts#target) appropriée pour définir où la règle doit s’appliquer. Nous pouvons choisir _"Expédier"_ pour réorganiser les modes d’expédition affichés après la saisie d’une **adresse de livraison**. Puis, nous pouvons sélectionner :
+Ensuite, sur le même écran, sélectionnez la [Cible](/guides/fr/get-started/concepts#cible) appropriée pour définir où la règle doit s’appliquer. Nous pouvons choisir _"Expédier"_ pour réorganiser les modes d’expédition affichés après la saisie d’une **adresse de livraison**. Puis, nous pouvons sélectionner :
 
 - **Toutes les expéditions sauf les abonnements** – applique la règle uniquement aux expéditions normales et ignore toute commande contenant des produits par abonnement. C’est utile, car Shopify peut automatiquement choisir le mode d’expédition le moins cher pour les produits par abonnement et masquer tous les autres modes d’expédition. Masquer ce mode le moins cher peut provoquer une erreur "aucune expédition disponible". C’est pourquoi nous recommandons d’utiliser cette option si vous avez des produits par abonnement afin d’éviter cette erreur.
 
@@ -59,7 +59,7 @@ Ou, nous pouvons choisir _"Retrait"_ si nous voulons que la règle s’applique 
   toujours commencer avec l’option par défaut et la modifier plus tard.
 </Info>
 
-Ensuite, sur le même écran, sélectionnez l’[ensemble de conditions](/guides/fr/get-started/concepts#condition-set) pertinent, la [condition](/guides/fr/get-started/concepts#conditions-when) et l’[action](/guides/fr/get-started/concepts#action-what).
+Ensuite, sur le même écran, sélectionnez l’[ensemble de conditions](/guides/fr/get-started/concepts#ensemble-de-conditions) pertinent, la [condition](/guides/fr/get-started/concepts#conditions-le-«-quand-») et l’[action](/guides/fr/get-started/concepts#action-le-«-quoi-»).
 
 > À titre d’exemple, ici nous allons choisir l’ensemble de conditions par défaut, puis définir la règle pour qu’elle s’exécute toujours, et sélectionner l’opération pour réorganiser les modes d’expédition du prix le plus élevé au plus bas.
 
@@ -109,7 +109,7 @@ Cliquez sur **Règles** dans la barre latérale pour afficher toutes les règles
 <Warning>
   L’activation des règles n’est disponible que sur les forfaits payants. Si vous
   n’avez pas encore mis à niveau votre forfait, suivez les instructions
-  [ici](/guides/fr/get-started/installation#upgrade-your-plan) pour effectuer la
+  [ici](/guides/fr/get-started/installation#mettre-à-niveau-votre-forfait) pour effectuer la
   mise à niveau.
 </Warning>
 <img src="/images/shared/activate-the-rule.webp" alt="Activer la règle" />
