--- a/guides/ja/essentials/discount/discount-order-amount.mdx
+++ b/guides/ja/essentials/discount/discount-order-amount.mdx
@@ -16,7 +16,7 @@ icon: "badge-percent"
 
 ### 新しいルールを作成
 
-[ショッピファイ管理画面](/guides/ja/get-started/installation#go-to-the-app) からアプリを開きます。サイドバーの [ルール](/guides/ja/get-started/quickstart#create-a-sample-rule) セクションに移動し、_「ルールを作成」_ をクリックします。
+[ショッピファイ管理画面](/guides/ja/get-started/installation#アプリを開く) からアプリを開きます。サイドバーの [ルール](/guides/ja/get-started/quickstart#サンプルルールを作成) セクションに移動し、_「ルールを作成」_ をクリックします。
 
 次に、**チェックアウトルールタイプ選択画面** にリダイレクトされます。_カテゴリー「割引」→ チェックアウトルールタイプ「注文金額の割引」→ 「ルールを選択」_ を選びます。
 
@@ -43,14 +43,14 @@ icon: "badge-percent"
   alt="割引コード"
 />
 
-同じ画面で、ルールの [ステータス](/guides/ja/get-started/concepts#status) を選択します：テスト、アクティブ、または無効。ここでは、**テスト** ステータスを選択して、実際の顧客のチェックアウトに影響を与えずにルールをすぐにテストできます。
+同じ画面で、ルールの [ステータス](/guides/ja/get-started/concepts#ステータス) を選択します：テスト、アクティブ、または無効。ここでは、**テスト** ステータスを選択して、実際の顧客のチェックアウトに影響を与えずにルールをすぐにテストできます。
 
 <img
   src="/images/essentials/shipping/rule-status-discount-shipping-methods.webp"
   alt="ルールステータス"
 />
 
-同じ画面で、[組み合わせ設定](/guides/ja/get-started/concepts#combinations) を設定し、この注文割引が **他の割引** とどのように組み合わせられるかを制御します。次の組み合わせが可能です：
+同じ画面で、[組み合わせ設定](/guides/ja/get-started/concepts#組み合わせ) を設定し、この注文割引が **他の割引** とどのように組み合わせられるかを制御します。次の組み合わせが可能です：
 
 - **商品割引** – 注文割引が商品レベルの割引と併用できるようにします。商品割引も注文割引との組み合わせを許可するように設定してください。
 
@@ -63,14 +63,14 @@ icon: "badge-percent"
   alt="組み合わせ"
 />
 
-同じ画面で、[戦略](/guides/ja/get-started/concepts#strategy) を設定し、複数の割引ブロックをシステムがどのように扱うかを制御します。**最初** を選択すると、条件を満たす最初の割引のみが適用され、後でより良い割引があっても無視されます。**最大** を選択すると、すべての割引ブロックを評価し、最も高い割引を適用します。
+同じ画面で、[戦略](/guides/ja/get-started/concepts#ストラテジー) を設定し、複数の割引ブロックをシステムがどのように扱うかを制御します。**最初** を選択すると、条件を満たす最初の割引のみが適用され、後でより良い割引があっても無視されます。**最大** を選択すると、すべての割引ブロックを評価し、最も高い割引を適用します。
 
 <img
   src="/images/essentials/discount/strategy-order-discount.webp"
   alt="注文割引の戦略"
 />
 
-同じ画面で、関連する [条件](/guides/ja/get-started/concepts#conditions-when) および [アクション](/guides/ja/get-started/concepts#action-what) を選択します。
+同じ画面で、関連する [条件](/guides/ja/get-started/concepts#コンディション（「いつ」）) および [アクション](/guides/ja/get-started/concepts#アクション（「何を」）) を選択します。
 
 > 例として、ルールを常に実行するよう設定し、**10% 割引** を **パーセンテージ** オプションで適用するよう構成します。割引メッセージ **「10% OFF」** がチェックアウトで顧客に表示されます。
 
@@ -86,7 +86,7 @@ icon: "badge-percent"
   alt="アクションタイプ 割引"
 />
 
-同じ画面で、[割引の最大使用回数](/guides/ja/get-started/concepts#maximum-discount-uses) セクションにて、割引コードの使用制限を有効化したり、顧客ごとに1回までに制限したり、割引コードが選択されている場合は両方を適用できます。
+同じ画面で、[割引の最大使用回数](/guides/ja/get-started/concepts#割引の最大利用回数) セクションにて、割引コードの使用制限を有効化したり、顧客ごとに1回までに制限したり、割引コードが選択されている場合は両方を適用できます。
 
 最後に、画面上部の <b>保存</b> ボタンをクリックして、ルールを作成および保存します。
 
@@ -120,7 +120,7 @@ icon: "badge-percent"
 
 <Warning>
   ルールの有効化は有料プランでのみ利用可能です。プランをまだアップグレードしていない場合は、
-  [こちら](/guides/ja/get-started/installation#upgrade-your-plan) の手順に従ってアップグレードしてください。
+  [こちら](/guides/ja/get-started/installation#プランをアップグレード) の手順に従ってアップグレードしてください。
 </Warning>
 
 
