--- a/guides/ja/essentials/payment/hide-express-checkout-options.mdx
+++ b/guides/ja/essentials/payment/hide-express-checkout-options.mdx
@@ -18,7 +18,7 @@ icon: "eye-slash"
 
 ### 新しいルールを作成
 
-[ショッピファイ管理画面](/guides/ja/get-started/installation#go-to-the-app) からアプリを開きます。サイドバーの [ルール](/guides/ja/get-started/quickstart#create-a-sample-rule) セクションに移動し、_「ルールを作成」_ をクリックします。
+[ショッピファイ管理画面](/guides/ja/get-started/installation#アプリを開く) からアプリを開きます。サイドバーの [ルール](/guides/ja/get-started/quickstart#サンプルルールを作成) セクションに移動し、_「ルールを作成」_ をクリックします。
 
 その後、**チェックアウトルールタイプ選択画面** にリダイレクトされます。_カテゴリ「支払い」→ チェックアウトルールタイプ「エクスプレスチェックアウトオプションを非表示」→ 「ルールを選択」_ を選択します。
 
@@ -38,7 +38,7 @@ icon: "eye-slash"
 
 ### ルールの設定
 
-まず、任意で「エクスプレスチェックアウトオプションを非表示」といった名前を追加して、ルールの内容を説明します。次に、ルールの [ステータス](/guides/ja/get-started/concepts#status) を選択します: テスト中、アクティブ、または非アクティブ。
+まず、任意で「エクスプレスチェックアウトオプションを非表示」といった名前を追加して、ルールの内容を説明します。次に、ルールの [ステータス](/guides/ja/get-started/concepts#ステータス) を選択します: テスト中、アクティブ、または非アクティブ。
 
 ここでは例として **テスト中** を選択し、実際の顧客のチェックアウトに影響を与えずにルールをテストします。
 
@@ -101,7 +101,7 @@ icon: "eye-slash"
 
 <Warning>
   ルールの有効化は有料プランでのみ利用可能です。プランをまだアップグレードしていない場合は、
-  [こちら](/guides/ja/get-started/installation#upgrade-your-plan) の手順に従ってアップグレードしてください。
+  [こちら](/guides/ja/get-started/installation#プランをアップグレード) の手順に従ってアップグレードしてください。
 </Warning>
 <img
   src="/images/essentials/payment/activate-the-rule-hide-express-checkout-options.webp"
