--- a/guides/ja/essentials/payment/hide-payment-methods.mdx
+++ b/guides/ja/essentials/payment/hide-payment-methods.mdx
@@ -16,7 +16,7 @@ icon: "eye-slash"
 
 ### 新しいルールを作成
 
-[ショッピファイ管理画面](/guides/ja/get-started/installation#go-to-the-app) からアプリを開きます。サイドバーの [ルール](/guides/ja/get-started/quickstart#create-a-sample-rule) セクションに移動し、_「ルールを作成」_ をクリックします。
+[ショッピファイ管理画面](/guides/ja/get-started/installation#アプリを開く) からアプリを開きます。サイドバーの [ルール](/guides/ja/get-started/quickstart#サンプルルールを作成) セクションに移動し、_「ルールを作成」_ をクリックします。
 
 次に、**チェックアウトルールタイプ選択画面** にリダイレクトされます。_カテゴリー「支払い」→ チェックアウトルールタイプ「支払い方法を非表示にする」→ 「ルールを選択」_ を選びます。
 
@@ -29,7 +29,7 @@ icon: "eye-slash"
 
 ### ルールの設定
 
-ルールを設定するには、まず任意で「支払い方法を非表示にする」などの名前を付けて、何をするルールかを説明できます。次に、ルールの [ステータス](/guides/ja/get-started/concepts#status) を選択します：テスト、アクティブ、または無効。
+ルールを設定するには、まず任意で「支払い方法を非表示にする」などの名前を付けて、何をするルールかを説明できます。次に、ルールの [ステータス](/guides/ja/get-started/concepts#ステータス) を選択します：テスト、アクティブ、または無効。
 
 ここでは、**テスト** ステータスを選択して、実際の顧客のチェックアウトに影響を与えずにルールをすぐにテストできます。
 
@@ -38,7 +38,7 @@ icon: "eye-slash"
   alt="ルール設定 1"
 />
 
-同じ画面で、関連する [条件セット](/guides/ja/get-started/concepts#condition-set)、[条件](/guides/ja/get-started/concepts#conditions-when)、および [アクション](/guides/ja/get-started/concepts#action-what) を選択します。
+同じ画面で、関連する [条件セット](/guides/ja/get-started/concepts#コンディションセット)、[条件](/guides/ja/get-started/concepts#コンディション（「いつ」）)、および [アクション](/guides/ja/get-started/concepts#アクション（「何を」）) を選択します。
 
 > 例として、デフォルトの **条件セット1** を使用し、ルールを常に実行するように設定し、支払い方法 **「代金引換 (COD)」** を非表示に設定します。
 
@@ -102,7 +102,7 @@ icon: "eye-slash"
 
 <Warning>
   ルールの有効化は有料プランでのみ利用可能です。プランをまだアップグレードしていない場合は、
-  [こちら](/guides/ja/get-started/installation#upgrade-your-plan) の手順に従ってアップグレードしてください。
+  [こちら](/guides/ja/get-started/installation#プランをアップグレード) の手順に従ってアップグレードしてください。
 </Warning>
 <img
   src="/images/essentials/payment/activate-the-rule-hide-payment-methods.webp"
