--- a/guides/ja/essentials/shipping/discount-shipping-methods.mdx
+++ b/guides/ja/essentials/shipping/discount-shipping-methods.mdx
@@ -16,7 +16,7 @@ icon: "badge-percent"
 
 ### 新しいルールを作成
 
-[ショッピファイ管理画面](/guides/ja/get-started/installation#go-to-the-app) からアプリを開きます。サイドバーの [ルール](/guides/ja/get-started/quickstart#create-a-sample-rule) セクションに移動し、_「ルールを作成」_ をクリックします。
+[ショッピファイ管理画面](/guides/ja/get-started/installation#アプリを開く) からアプリを開きます。サイドバーの [ルール](/guides/ja/get-started/quickstart#サンプルルールを作成) セクションに移動し、_「ルールを作成」_ をクリックします。
 
 その後、**チェックアウトルールタイプ選択画面** にリダイレクトされます。_カテゴリ「配送」→ チェックアウトルールタイプ「配送方法の割引」→ 「ルールを選択」_ を選択します。
 
@@ -43,14 +43,14 @@ icon: "badge-percent"
   alt="割引コード"
 />
 
-次に、同じ画面でルールの [ステータス](/guides/ja/get-started/concepts#status) を選択します: テスト中、アクティブ、または非アクティブ。ここでは例として **テスト中** を選択し、実際の顧客のチェックアウトに影響を与えずにルールをテストします。
+次に、同じ画面でルールの [ステータス](/guides/ja/get-started/concepts#ステータス) を選択します: テスト中、アクティブ、または非アクティブ。ここでは例として **テスト中** を選択し、実際の顧客のチェックアウトに影響を与えずにルールをテストします。
 
 <img
   src="/images/essentials/shipping/rule-status-discount-shipping-methods.webp"
   alt="ルールステータス"
 />
 
-同じ画面で、[組み合わせ](/guides/ja/get-started/concepts#combinations) の設定を行い、この配送割引が他の割引とどのように連動するかを制御します。以下の組み合わせが可能です:
+同じ画面で、[組み合わせ](/guides/ja/get-started/concepts#組み合わせ) の設定を行い、この配送割引が他の割引とどのように連動するかを制御します。以下の組み合わせが可能です:
 
 - **商品割引** – 商品レベルの割引と併用できます。商品割引も配送割引と組み合わせ可能に設定してください。
 - **注文割引** – 注文全体の割引と併用できます。注文割引も配送割引と組み合わせ可能に設定してください。
@@ -60,7 +60,7 @@ icon: "badge-percent"
   alt="組み合わせ設定"
 />
 
-次に、同じ画面で関連する [条件セット](/guides/ja/get-started/concepts#condition-set)、[条件](/guides/ja/get-started/concepts#conditions-when)、および [アクション](/guides/ja/get-started/concepts#action-what) を選択します。
+次に、同じ画面で関連する [条件セット](/guides/ja/get-started/concepts#コンディションセット)、[条件](/guides/ja/get-started/concepts#コンディション（「いつ」）)、および [アクション](/guides/ja/get-started/concepts#アクション（「何を」）) を選択します。
 
 > ここでは例として、デフォルトの **条件セット1** を使用し、ルールを常に実行するように設定し、**パーセンテージ** オプションで全配送方法に **10%割引** を適用します。割引メッセージ **「10% OFF」** がチェックアウトで顧客に表示されます。
 
@@ -83,7 +83,7 @@ icon: "badge-percent"
   alt="配送方法選択"
 />
 
-同じ画面で、[最大割引使用回数](/guides/ja/get-started/concepts#maximum-discount-uses) セクションにて、割引コードの使用制限を有効にしたり、顧客ごとに1回までに制限したり、両方を設定することもできます。
+同じ画面で、[最大割引使用回数](/guides/ja/get-started/concepts#割引の最大利用回数) セクションにて、割引コードの使用制限を有効にしたり、顧客ごとに1回までに制限したり、両方を設定することもできます。
 
 最後に、画面上部の <b>保存</b> ボタンをクリックしてルールを作成および保存します。
 
@@ -117,7 +117,7 @@ icon: "badge-percent"
 
 <Warning>
   ルールの有効化は有料プランでのみ利用可能です。プランをまだアップグレードしていない場合は、
-  [こちら](/guides/ja/get-started/installation#upgrade-your-plan) の手順に従ってアップグレードしてください。
+  [こちら](/guides/ja/get-started/installation#プランをアップグレード) の手順に従ってアップグレードしてください。
 </Warning>
 <img
   src="/images/essentials/shipping/activate-the-rule-discount-shipping-methods.webp"
