--- a/guides/ja/essentials/shipping/hide-shipping-methods.mdx
+++ b/guides/ja/essentials/shipping/hide-shipping-methods.mdx
@@ -16,7 +16,7 @@ icon: "eye-slash"
 
 ### 新しいルールを作成
 
-[ショッピファイ管理画面](/guides/ja/get-started/installation#go-to-the-app) からアプリを開きます。サイドバーの [ルール](/guides/ja/get-started/quickstart#create-a-sample-rule) セクションに移動し、_「ルールを作成」_ をクリックします。
+[ショッピファイ管理画面](/guides/ja/get-started/installation#アプリを開く) からアプリを開きます。サイドバーの [ルール](/guides/ja/get-started/quickstart#サンプルルールを作成) セクションに移動し、_「ルールを作成」_ をクリックします。
 
 その後、**チェックアウトルールタイプ選択画面** にリダイレクトされます。_カテゴリ「配送」→ チェックアウトルールタイプ「配送方法を非表示にする」→ 「ルールを選択」_ を選択します。
 
@@ -36,7 +36,7 @@ icon: "eye-slash"
 
 ### ルールの設定
 
-ルールを設定するには、まず任意で「配送方法を非表示にする」といった名前を追加して、ルールの内容を説明できます。その後、ルールの [ステータス](/guides/ja/get-started/concepts#status) を選択します: テスト中、アクティブ、または非アクティブ。
+ルールを設定するには、まず任意で「配送方法を非表示にする」といった名前を追加して、ルールの内容を説明できます。その後、ルールの [ステータス](/guides/ja/get-started/concepts#ステータス) を選択します: テスト中、アクティブ、または非アクティブ。
 
 ここでは例として **テスト中** のステータスを選択します。これにより、実際の顧客のチェックアウトに影響を与えずにルールをすぐにテストできます。
 
@@ -45,7 +45,7 @@ icon: "eye-slash"
   alt="ルール設定1"
 />
 
-同じ画面で、ルールを適用する場所を定義するために、適切な [対象](/guides/ja/get-started/concepts#target) を選択します。_「配送」_ を選択すると、**配送先住所** 入力後に表示される配送方法を非表示にできます。その後、以下を選択できます:
+同じ画面で、ルールを適用する場所を定義するために、適切な [対象](/guides/ja/get-started/concepts#ターゲット) を選択します。_「配送」_ を選択すると、**配送先住所** 入力後に表示される配送方法を非表示にできます。その後、以下を選択できます:
 
 - **定期購入を除くすべての出荷** – 通常配送のみにルールを適用し、定期購入商品を含む注文はスキップします。ショッピファイは定期購入商品の最安配送方法を自動選択し、他の配送方法を非表示にすることがあるため、このオプションを使用すると「配送方法なし」エラーを回避できます。
 
@@ -55,7 +55,7 @@ icon: "eye-slash"
 
 <img src="/images/essentials/shipping/select-target.webp" alt="対象選択" />
 
-同じ画面で、関連する [条件セット](/guides/ja/get-started/concepts#condition-set)、[条件](/guides/ja/get-started/concepts#conditions-when)、および [アクション](/guides/ja/get-started/concepts#action-what) を選択します。
+同じ画面で、関連する [条件セット](/guides/ja/get-started/concepts#コンディションセット)、[条件](/guides/ja/get-started/concepts#コンディション（「いつ」）)、および [アクション](/guides/ja/get-started/concepts#アクション（「何を」）) を選択します。
 
 > ここでは例として、デフォルトの **条件セット1** を使用し、ルールを常に実行するように設定し、**「Express Worldwide」** を含む配送方法を非表示にするように設定します。
 
@@ -96,7 +96,7 @@ icon: "eye-slash"
 
 <Warning>
   ルールの有効化は有料プランでのみ利用可能です。プランをまだアップグレードしていない場合は、
-  [こちら](/guides/ja/get-started/installation#upgrade-your-plan) の手順に従ってアップグレードしてください。
+  [こちら](/guides/ja/get-started/installation#プランをアップグレード) の手順に従ってアップグレードしてください。
 </Warning>
 <img
   src="/images/essentials/shipping/activate-the-rule-hide-shipping-methods.webp"
