--- a/snippets/condition-set/ja/previous-all-conditions-invalid.mdx
+++ b/snippets/condition-set/ja/previous-all-conditions-invalid.mdx
@@ -1,6 +1,6 @@
 ## 以前のすべての条件が無効
 
-前の[ルールブロック](/guides/ja/get-started/concepts#block)で、すべての条件が無効（つまり、前のルールブロックが実行されなかった）場合、この条件は真となり、以前の条件が1つも満たされなかった場合にのみアクションが実行されるようにします。
+前の[ルールブロック](/guides/ja/get-started/concepts#ブロック)で、すべての条件が無効（つまり、前のルールブロックが実行されなかった）場合、この条件は真となり、以前の条件が1つも満たされなかった場合にのみアクションが実行されるようにします。
 
 <Note>少なくとも1つの以前のルールブロックが存在する場合のみ利用可能です。</Note>
 
